--- a/src/content/docs/en/faq.mdx
+++ b/src/content/docs/en/faq.mdx
@@ -2,7 +2,7 @@
 title: Frequently Asked questions
 ---
 
-Here are answers to some common questions concerning RIM. When faced with an issue, please refer to this document whenever possible.  
+Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
 Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
 
 ## What is Scribe for Meetings?
