--- a/src/content/docs/en/localization.mdx
+++ b/src/content/docs/en/localization.mdx
@@ -2,12 +2,9 @@
 title: Localization
 ---
 
-Remote Incident Manager currently ships with 6 major languages, with more being added over time. If your system locale is among RIM's supported languages, RIM will use the language you specified.
+Scribe for Meetings currently ships with 6 major languages, with more being added over time. If your system locale is among the supported languages in Scribe for Meetings, the user interface will use your chosen language. Note that presentation content will still be presented in the language of the original document.
 
-# Switching languages
+## Switching languages
 
-Whether you are in controller or target mode, Remote Incident Manager displays a language selector button at the bottom of the screen. Clicking this will display a list of languages. Select the desired language, and then click the "Switch language" button.
+Scribe for Meetings displays a language selector button at the bottom of the screen. Clicking this will display a list of languages. Select the desired language, and then click the "Switch language" button.
 
-# additional Languages
-
-We welcome contributions of additional languages from individuals and entities alike. For information on how to contribute languages, [Visit the Localization repository on Github](https://github.com/PneumaSolutions/rim-localization)
