--- a/src/content/docs/fr/faq.mdx
+++ b/src/content/docs/fr/faq.mdx
@@ -1,124 +1,139 @@
 ---
-title: Questions fréquemment posées
+title: Frequently Asked questions
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
+Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
 
-Voici les réponses à certaines questions courantes concernant le RIM. Lorsque vous êtes confronté à un problème, veuillez vous référer à ce document dans la mesure du possible. Si votre question n'est pas traitée dans ce document, veuillez [nous contacter] (https://pneumasolutions.com/contact/)
-## Compatibilité
-### Quelles sont les versions de Windows prises en charge ?
-Nous prenons en charge Windows7SP1 et les versions ultérieures, ainsi que Windows Server2012 et les versions ultérieures.
-### Quelles sont les versions de Mac OS prises en charge ?
-RIM prend en charge Mac OS Ventura ainsi que les versions futures, qu'elles soient Intel ou Apple Silicon. En tant qu'utilisateur de Mac, vous pouvez fournir une assistance aux cibles Windows, et les utilisateurs de Windows peuvent fournir une assistance à votre Mac.
-### Qu'en est-il des versions de Mac OS antérieures à Ventura ?
-Certaines caractéristiques de RIM dépendent de fonctionnalités nouvellement introduites dans Ventura, ce qui rend la compatibilité avec les versions antérieures difficile à mettre en œuvre.
-### Installation
-### Pourquoi tant de demandes de permissions sur Mac OS ?
-C'est malheureusement indépendant de notre volonté, car Mac OS exige que nous utilisions ses propres moyens pour demander les autorisations nécessaires pour RIM. Nous n'avons aucun contrôle sur l'interface utilisateur et ne pouvons donc que fournir autant d'instructions que possible.
-### Informations sur la connexion
-### D'une manière générale, quelle est la réactivité de RIM ?
-La latence aller-retour au cours d'une session RIM est extrêmement faible. Comme nous ne dépendons pas d'un service central, la plupart du temps, vos connexions sont directes d'un ordinateur à l'autre - c'est ce que l'on appelle le peer-to-peer. Si la configuration de votre réseau ne permet pas les connexions peer-to-peer, nous nous rabattons sur un certain nombre de relais situés dans le monde entier au lieu de nous appuyer sur un serveur central. Ainsi, même dans ce cas, votre temps de latence sera relativement minime.
-### Où sont situés vos relais ?
-Actuellement, nous proposons des relais dans les pays suivants :
-* ÉTATS-UNIS
-    * Virginie
-    * Californie
-* Toronto, Canada
-* Londres, Angleterre
-* Varsovie, Pologne
-* Bangalore, Inde
-* Singapour
-* Sidney, Australie
-* Sao Paulo, Brésil
+## What is Scribe for Meetings?
 
-## Session générale Dépannage
-### La machine cible à laquelle je suis connecté ne répond pas correctement aux commandes clavier qui fonctionnent bien sur mon clavier. Que se passe-t-il ?
-Cela peut être dû à l'une ou l'autre des possibilités suivantes :
-* Un conflit entre les dispositions de clavier : Dans de rares cas, si une disposition de clavier est suffisamment différente de la vôtre, elle peut perturber RIM. Dans ce cas, veuillez nous contacter avec un rapport contenant des informations sur la disposition du clavier des deux machines.
-* Si la machine cible utilise JAWS 2024, son traitement unifié du clavier interfère parfois avec l'utilisation de la touche CTRL pour couper la parole. Bien que nous ayons mis en place un correctif, des problèmes peuvent encore survenir.
-    * Ce problème peut être résolu en désactivant le traitement unifié du clavier dans le centre de configuration de JAWS.
-    * Le traitement unifié du clavier n'est pas nécessaire si l'utilisateur cible n'utilise pas également ZoomText ou Fusion.
-* Si la machine cible utilise NVDA et que l'option "Handle keys from other applications" n'est pas cochée, RIM ne pourra pas traiter les entrées clavier provenant du contrôleur.
-    * Notez que ce paramètre est activé par défaut et que, dans la plupart des cas, il est conseillé de le laisser activé.
+Scribe for Meetings is a cloud-based technology that takes a shared presentation on platforms like Zoom, Microsoft Teams, Google Meet, and others and renders it into an accessible presentation in real time for print-impaired individuals.
 
-### Lorsque je démarre une conversation vocale sous Windows, RIM utilise le microphone interne, quel que soit le microphone que je sélectionne dans les paramètres sonores. Qu'est-ce qui ne va pas ?
+## Who benefits from Scribe for Meetings?
 
-Cela peut être dû à la technologie Intel® Smart Sound pour les microphones numériques sur certains processeurs Intel récents. La désactivation de cette technologie devrait résoudre le problème. Pour désactiver la technologie Intel® Smart Sound pour les microphones numériques, procédez comme suit :
-1. Allez dans la boîte d'exécution (Windows+R).
-1. Tapez devmgmt.msc
-1. Dans l'arborescence des périphériques, développez "Contrôleurs son, vidéo et jeu"
-1. Faites un clic droit sur "Intel® Smart Sound Technology for Digital Microphones" Choisissez "Désactiver le périphérique" dans le menu contextuel.
+First and most importantly, the millions of print-impaired persons who would otherwise not benefit from the information being presented; and, the masses of businesses large and small, government agencies, all levels of education,, and organizations who know little about accessibility but would like an affordable means of making their content more inclusive.
 
-### La cible utilise ZoomText. Comment puis-je voir le résultat visuel tel qu'il est rendu par cet agrandissement ?
+## Why should I choose Scribe for Meetings over other products?
 
-Pour ce faire, ZoomText passe en mode de compatibilité. Ce mode permet de partager les améliorations d'écran via des outils tels que Teams ou Zoom, ainsi que RIM. Vous pouvez l'activer via le menu ZoomText : Aide &gt; Avancer &gt; Adaptateur d'affichage. Dans la boîte de dialogue ouverte, sélectionnez le mode de compatibilité et ZoomText redémarrera. Nous vous recommandons de remettre l'adaptateur d'affichage en mode normal une fois la session RIM terminée afin d'obtenir des performances et une qualité d'agrandissement optimales. 
+We’re confident there is nothing else out there that does what we do quite the way we do it. Scribe for Meetings is the first technology of its kind to synchronize with meeting platforms in real time. Sure, competitors will take note and likely roll out their imitations, and we look forward to the competition ,but unless they plan on competing on price, we feel confident you will find what you need right here.
 
-### Après qu'un ordinateur a été réimagé et reconfiguré avec le même nom d'ordinateur, y a-t-il quelque chose à faire pour que RIM fonctionne à nouveau ? 
-Il suffit de retirer la machine de votre compte, de réinstaller RIM, puis de réintégrer la machine dans votre compte.
+## How does Scribe for Meetings work?
 
-## Tarifs et paiements
-### Obtenir l'aide d'une personne sur RIM est donc totalement gratuit, n'est-ce pas ?
-Oui, c'est vrai ! Les abonnements et/ou les paiements uniques sont destinés aux particuliers et aux organisations qui souhaitent offrir une assistance à distance. Si vous êtes la personne qui reçoit de l'aide, vous n'avez pas à vous soucier de souscrire un abonnement. En fait, vous n'avez même pas besoin de créer un compte si vous ne faites que recevoir de l'aide.
-### Je ne fais pas vraiment d'assistance à distance régulièrement, mais il se peut que j'aide un ami ou un membre de ma famille à l'occasion. Existe-t-il des options qui n'impliquent pas d'abonnement ?
-Certainement ! Nous répondons à autant de cas d'utilisation que possible.
-* N'importe qui peut assister un utilisateur sur RIM gratuitement jusqu'à 30 minutes par jour. Ainsi, si vous avez besoin d'aider quelqu'un à installer un logiciel, à résoudre un problème rapidement ou à envoyer quelques fichiers, nous sommes là pour vous aider. Ces minutes ne doivent pas nécessairement être utilisées en une seule fois.
-* Il y a bien sûr des situations où un problème particulier nécessite un peu plus de temps. Ou bien vous aidez quelqu'un à apprendre un nouveau logiciel et vous risquez de vous connecter par intermittence au cours des prochains jours. C'est là qu'interviennent nos laissez-passer journaliers et nos laissez-passer en cas d'incident.
-    * Les passes d'incident vous permettent de vous connecter à une cible unique autant de fois que nécessaire sur une période de 24 heures.
-    * Les cartes journalières vous permettent de vous connecter à plusieurs cibles sur une période de 24 heures.
-    * Les forfaits d'heures prépayées vous permettent de disposer d'un nombre déterminé d'heures à utiliser entièrement sur votre temps libre.
-* Vous pouvez accumuler plusieurs de ces laissez-passer et forfaits d'heures et les utiliser chaque fois que le moment s'y prête. Si vous disposez de plusieurs cartes journalières, par exemple, vous n'êtes pas obligé de les utiliser consécutivement. De même, vous n'êtes pas obligé d'utiliser vos heures prépayées au cours d'une seule session ou d'une seule période de 24 heures.
+If you are the host:
+1. Visit [ScribeForMeetings.com,](https://scribeformeetings.com) paste the invite link for your meeting, and press “Go”.
+1. Click the button to register your meeting.
+1. If prompted, enter your email address to log in. If you’re using Scribe for Meetings on behalf of an organization, make sure to use your email address provided by that organization. If your organization has integrated Scribe for Meetings with a single sign-on (SSO) system, then you’ll be taken to the normal login process for your organization, or possibly logged in automatically. Otherwise, we’ll send you an email with a link that you can use to log into Scribe for Meetings.
+1. Enter a name for your meeting, select your PowerPoint slide deck, and press “Submit”.
+    NOTE: Scribe for Meetings currently supports Zoom meetings, Zoom webinars and Microsoft Teams. Sign up to our email list to receive a notification when we add features and additional meeting platforms.
 
-### J'ai acheté un paquet d'heures prépayées. Qu'advient-il de mon allocation quotidienne gratuite ?
-Bonne nouvelle : votre allocation quotidienne gratuite de 30 minutes ne disparaît pas ! Lorsque vous démarrez une session basée sur un mot-clé, RIM commence par utiliser votre allocation quotidienne gratuite de 30 minutes. Votre temps prépayé sera utilisé une fois que les 30 minutes gratuites seront écoulées.
-### Combien de temps mes heures prépayées dureront-elles ? Sont-elles liées à mon abonnement ?
-Les heures prépayées sont entièrement indépendantes de votre abonnement. Cela dit, vos heures prépayées resteront sur votre compte pendant un (1) an après la date à laquelle elles ont été utilisées pour la première fois.
-### Comment puis-je attirer l'attention de mon lieu de travail sur RIM ?
-Nous avons créé un [kit d'autopromotion] (https://sak.getrim.app) (SAK). Il s'agit d'un ensemble de lettres formatées pour le courrier électronique que vous pouvez envoyer aux personnes concernées en votre nom ou au nom d'un employé. Pour mémoire, le RIM offre les mêmes fonctionnalités que les solutions courantes moins accessibles. En tant que tel, le RIM peut remplacer une infrastructure existante, plutôt que d'être utilisé en parallèle. Il est donc considéré comme un aménagement raisonnable de l'accessibilité et devrait vous être fourni par votre organisation. L'accessibilité n'est pas une faveur, c'est un droit à l'inclusion.
-### Quelles méthodes de paiement acceptez-vous ?
-Nous traitons les paiements via FastSpring, ce qui nous permet d'accepter directement une variété de méthodes de paiement internationales, y compris les principales cartes de crédit, PayPal, Alipay, et bien d'autres encore.
+Your content will be ready to launch within minutes. No knowledge of creating accessible presentations is required. As the host, you don’t need to run extra software on your device, and content can be uploaded as little as 5 minutes before the meeting.
+For the print-impaired meeting attendee, navigate to https://www.ScribeForMeetings.com, paste in your Zoom or Microsoft Teams invite link, and press “Go”. Alternatively, your meeting host might have given you a direct link to Scribe for Meetings, either in the invitation email or in the meeting itself via chat. Whichever way you get there, you’re now ready to follow along with the presentation in any web browser on any platform.
 
-### Comment fonctionnent ces laissez-passer ? L'horloge démarre-t-elle immédiatement après le paiement ou le jour où j'initie la session ?
-Les passes ne commencent qu'au moment où le contrôleur lance la session. Ainsi, si la machine de la cible tombe en panne et nécessite un déplacement à l'atelier et qu'il n'est pas possible de la réparer le jour même, vous pouvez simplement attendre que la machine soit à nouveau en bon état et votre carte journalière vous attendra toujours.
-### Cela signifie-t-il que ces cartes n'expirent pas ?
-Non. Soyez assuré que votre accumulation de cartes journalières attendra patiemment que vous les activiez dès que vous serez prêt.
-### Que se passe-t-il si je me connecte à une autre machine le jour où une carte d'accès en cas d'incident a été utilisée ?
-Cela dépend. Si la machine fait partie de votre abonnement, c'est-à-dire si vous accédez à votre machine personnelle lorsque vous êtes en déplacement, tout se passe comme d'habitude. Toutes les autres connexions qui ne sont pas la cible initiale à laquelle vous vous êtes connecté fonctionneront dans le cadre de l'allocation habituelle de 30 minutes.
-### J'ai un abonnement personnel actif. Serai-je toujours en mesure d'aider un utilisateur en dehors du groupe de cibles pour une durée maximale de 30 minutes, ou par le biais d'un laissez-passer ?
-Oui ! Votre allocation de 30 minutes par jour reste valable pour toute machine ne faisant pas partie de votre abonnement. En outre, l'acquisition d'un abonnement ne remplace pas les laissez-passer que vous possédez déjà.
-### J'ai un abonnement personnel et l'ordinateur cible a subi une mise à jour matérielle. Rim considère-t-il cela comme un changement de machine ?
-Seulement si RIM doit être réinstallé. Ainsi, alors qu'une mise à niveau du disque dur ou toute autre situation nécessitant une réinstallation de Windows serait considérée comme un changement de machine, la mise à niveau de la mémoire vive ne le serait pas.
-### Notre entreprise a acheté l'abonnement pro, mais nous avons deux techniciens - un qui s'occupe du service d'assistance pendant la journée, et un technicien de maintenance système qui travaille le soir. Serait-il possible d'attribuer à l'administrateur système du soir un siège de contrôleur ?
-Tout à fait. Dans les situations où plusieurs techniciens utilisent RIM, nous offrons jusqu'à deux (2) sièges de contrôleur supplémentaires pour 50 $ par mois par siège - 500 $ par an par siège - pour accompagner le plan pro si nécessaire. Il sera ainsi plus facile pour plusieurs contrôleurs situés à différents postes de travail ou bureaux de fournir une assistance à distance.  
-Si vous disposez de plusieurs sièges de contrôleur, vous pouvez acheter des canaux supplémentaires pour eux afin que les sessions puissent se dérouler simultanément. Chaque canal supplémentaire coûte 50 $ par mois ou 500 $ par an. 
+## How difficult is it to install Scribe for Meetings?
 
-## Sécurité
-### Les sessions RIM sont-elles cryptées ?
-Oui. Toutes les sessions sur toutes les plates-formes, qu'il s'agisse de connexions directes d'égal à égal ou de connexions utilisant un relais, sont cryptées de bout en bout à l'aide du protocole DTLS (Datagram Transport Layer Security). Il s'agit de la même technologie que celle utilisée dans le protocole HTTPS que les sites web modernes mettent en œuvre pour la sécurité.
-### Pneuma Solutions peut-il écouter les sessions relayées par le nuage public ?
-Non. La négociation de la clé de session et le cryptage sont effectués de bout en bout entre le contrôleur et la cible. En d'autres termes, tout est crypté avant même de quitter votre appareil. De cette manière, le service en nuage ne fait que relayer les données telles quelles, ce qui rend impossible leur déchiffrement par le service.
-### Quelles mesures ont été prises pour prévenir les vulnérabilités liées à l'exécution de code à distance (RCE) ?
-Tout le code de RIM exposé à des entrées provenant du réseau est écrit dans des [langages de programmation à sécurité mémoire] (https://www.memorysafety.org/docs/memory-safety/), notamment Rust et JavaScript.
-### RIM est-il conforme à la loi HIPAA ?
-Oui. La meilleure configuration dans ce cas serait un déploiement sur site, veuillez donc [nous contacter](https://pneumasolutions.com/contact/) si votre cas d'utilisation en dépend.
-### Faut-il ouvrir des ports sur la cible ou le contrôleur ?
-Non et non.
-### Quelles connexions doivent être autorisées sur un réseau pour que RIM fonctionne ?
-Lors de l'utilisation du nuage public, une connexion https à [getrim.app] (https://getrim.app) est nécessaire. Dans les cas optimaux, cela suffit pour que RIM établisse une connexion peer-to-peer entre le contrôleur et la cible. Cependant, il est utile d'autoriser les connexions UDP via les ports 19302 et 3478 (les ports STUN et TURN standard). Ainsi, si un relais est utilisé, RIM n'aura pas à se rabattre sur une connexion tcp sur le port 443.
-### RIM fonctionne-t-il en arrière-plan et, dans l'affirmative, apparaîtra-t-il dans ma liste Commande+Tab ?
-RIM fonctionne en arrière-plan afin de traiter les mises à jour automatiques, de recevoir des demandes de connexion non sollicitées et de permettre l'utilisation de la commande globale Option+Shift+Backspace. Il ne téléphonera pas à la maison à d'autres fins et aucune information personnelle identifiable n'est transférée.  
-Le RIM n'apparaîtra pas dans votre liste Commande+Tab, mais il apparaîtra dans les menus d'état qui contiennent des informations sur votre batterie, votre connexion WiFi, etc.
-## Module d'accessibilité à distance
-### Y a-t-il quelque chose que la machine cible doit configurer pour la première utilisation du module d'accessibilité à distance ?
-Rien du tout ! Il n'y a pas de boîte de dialogue, d'écran de demande d'autorisation ou quoi que ce soit de ce genre.
-### Le module d'accessibilité à distance fonctionne-t-il sur des écrans sécurisés tels que l'écran de verrouillage ?
-Oui ! Étant donné que l'hôte RIM fonctionne avec des privilèges élevés, nous pouvons utiliser le module d'accessibilité à distance pour les écrans sécurisés. La seule exception à cette règle est la fenêtre de connexion de FileVault.
-## Sessions sans surveillance
-### Les conversations vocales sont-elles prises en charge lors des sessions sans surveillance ?
-Non. Cependant, les sessions avec invite prennent en charge les conversations vocales.
-### Si je supprime une machine sans surveillance de mon compte de contrôleur, les autorisations sur la cible seront-elles automatiquement révoquées ?
-Oui. Une fois qu'une machine cible sans surveillance est supprimée, le changement prend effet immédiatement. Si la machine cible est hors tension ou n'est pas connectée à Internet, la modification sera effective dès qu'une connexion Internet sera établie sur sa machine.
-### La machine cible a redémarré après l'installation des mises à jour et des pilotes, et elle nécessite un mot de passe pour se connecter. Comment la session se poursuit-elle à partir de là ?
-Dans la plupart des cas, en particulier lorsque le cryptage de disque FileVault est activé, l'utilisateur cible devra saisir manuellement le mot de passe. RIM ne peut pas démarrer sur un Mac crypté avant qu'il n'ait été entièrement connecté.
-### J'ai plusieurs machines qui jouent le rôle de contrôleur. La liste des machines configurées pour un accès sans surveillance s'affichera-t-elle sur toutes les machines ?
-Oui. La liste des machines configurées pour l'accès sans surveillance est stockée dans votre compte, elle s'affichera donc automatiquement.
+Scribe for Meetings is not an installed application. It is a cloud service, so nothing more than a browser is needed to enjoy a meeting. For presenters, Other than uploading their content in advance of the meeting, the process was intentionally designed to be simple. There is nothing to install to your computer or device other than Zoom, Microsoft Teams or similar meeting platforms.
+Enterprise customers can host Scribe for Meetings on their own servers. Please get in touch with us for details.
+
+## I see an attendee named “Scribe for Meetings” trying to join my meeting. What’s going on?
+
+That’s the Scribe bot. This bot watches the screen in your meeting, so it can see what slide is currently being displayed and provide the accessible version of that slide in real time to print-impaired attendees. The Scribe bot will not disrupt your meeting in any way, and it will not collect any information other than what content is currently being displayed through screen sharing. If your meeting has a waiting room, please promptly admit the Scribe bot into the meeting. Otherwise, Scribe for Meetings will not work.
+
+## I’m a print-impaired meeting attendee, and I don’t know if the meeting I’m attending has been registered through Scribe for Meetings. What can I do?
+
+Go to [ScribeForMeetings.com](https://scribeformeetings.com), paste in the Zoom or Microsoft Teams invite link for your meeting, and press “Go”. If the meeting has been registered with Scribe for Meetings, then you’re ready to follow along with accessible slides. If not, you can sign up to be notified by email when the meeting has been registered with Scribe for Meetings.
+
+## I frequently attend Zoom or Microsoft Teams meetings. What’s the easiest way for me to find out if a meeting is registered with Scribe for Meetings, and if it is, view the accessible content?
+
+Scribe for Meetings has an [extension for Chrome and Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) that checks the availability on Scribe for Meetings of any Zoom or Microsoft Teams meeting you attend. With a single hotkey, you can view the accessible content if the meeting is registered, or request a follow-up notification if the meeting is registered with Scribe for Meetings later.
+
+## I’m a print-impaired meeting attendee. Do you have any resources to help me ask the meeting host to use Scribe for Meetings?
+
+Yes; check out our [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com). Here you’ll find a variety of pre-written letters that you can personalize, then copy and paste into an email.
+
+## Can Scribe for Meetings convert a presentation to accessible file formats for offline viewing?
+
+Yes. When creating the meeting, the presenter can optionally choose to provide their presentation for downloading in the following file formats:
+* An accessible web page, with all of the same features as the live presentation, including read aloud
+* Tagged PDF
+* MP3, via text-to-speech in about a dozen languages
+* DAISY, text plus audio
+* EPUB
+* Microsoft Word
+* Braille: Grade 1, Grade 2, Unified English Braille, and many other languages
+
+The PDF and Microsoft Word options support large print. This option, and other options such as speaking rate for audio output, can be chosen by attendees when they download the slides.
+This feature is not enabled by default; the presenter must choose to allow it. To enable this feature when registering a meeting, check the checkbox called “Allow attendees to download accessible versions of slides.” This choice will only take effect for the meeting currently being registered.
+For a meeting where this feature is enabled, as soon as the presenter has shown a slide, the web page where attendees view accessible slides will include a link called “Download Slides”. To download the slides, an attendee should follow these steps:
+1. Click the “Download Slides” link.
+1. If prompted, enter your email address and follow the instructions to log in.
+1. Choose the accessible format you want.
+1. For some formats, you can optionally customize settings, such as text-to-speech voice, speaking rate, braille translation table, or large print.
+1. Click the “Prepare Download” button.
+1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+
+## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
+
+Yes. Follow these steps:
+1. 
+Go to ScribeForMeetings.com.
+1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
+1. Click “Settings”, then “Meeting Defaults”.
+1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
+
+## I want to protect my slides from unauthorized copying and distribution. Does Scribe for Meetings support this?
+
+Unfortunately, Scribe for Meetings cannot stop your attendees from copying the text of your slides. However, if you don’t allow the slides to be downloaded, it won’t be easy for attendees to copy your slides, because they will have to copy one slide at a time. Also, note that in practice, this is no different from what any attendee can already do by taking screenshots of your slides.
+
+## Is Scribe for Meetings multilingual?
+
+Yes. Scribe for Meetings can render content in any of 140 languages, again with no extra effort from the presenter.
+
+## Do I need to slow down my presentation to make sure that print-impaired attendees can keep up?
+
+No. Scribe for Meetings has a feature called Dynamic Visual Representation, or DVR mode for short, that allows print-impaired attendees to read your accessible slides at their own pace. An attendee can pause the live presentation, go back to a slide they’ve already read, move forward at their own pace, and then continue with the live presentation when they’re ready.
+To use DVR mode, the attendee should press either the Suspend Presentation button or the Previous Slide button. These buttons are labeled as such for screen reader users, and for mouse users who hover over them. Visually, they’re at the bottom of the page and look like the Pause and Previous Track buttons in a media player. When the user presses one of these buttons, the live presentation will pause, and for the Previous Slide button, it will return to the previous slide. The user can then use the Previous Slide and Next Slide buttons to go through the slides at their own pace, and the Go Live button to return to the live presentation. These buttons look like the Previous Track, Next Track, and Play buttons in a media player.  
+Note that DVR mode only allows attendees to review slides that have been shown since they joined the presentation. If a print-impaired attendee is late for your presentation, then they missed the same slides that any other late attendee would have missed.
+
+## I have a print-impaired attendee who would benefit from having my content spoken aloud but isn’t comfortable with a full screen reader. Can Scribe for Meetings help?
+
+Yes. Our Read Aloud feature will speak your slides using the voices provided by your user’s device and web browser, while drawing a box around each word as it is spoken to help the user follow along visually. For Windows users, we highly recommend the Microsoft Edge browser for this feature, because Edge offers outstanding voices in several languages, free of charge. However, this feature also works with all other major platforms and browsers, including mobile devices.  
+To start reading the current slide aloud, press the Read Aloud button, which is at the bottom of the screen and looks like a speaker. While Scribe for Meetings is reading the slide aloud, it will show controls to stop reading (the button with a square icon), pause or resume, go back or forward (the buttons that look like Previous Track and Next Track buttons in a media player), speed up and slow down reading, or change the voice. These controls will go away as soon as reading is finished or as soon as the user stops it.  
+Note that Read Aloud and DVR mode (see above) can be used together, to allow print-impaired attendees to read slides both in their own way and at their own pace.
+
+## I have a print-impaired attendee who needs my slides in a large font but doesn’t need a full-screen magnification program. Can Scribe for Meetings help?
+
+Yes. Scribe for Meetings displays your slides in a way that makes them accessible for attendees with all types of content requirements. If large fonts are needed, an attendee can use their browser’s page zoom feature to adjust the font size of the slides, without requiring the user to continually scroll back and forth. Scribe for Meetings will also automatically display the text in the user’s preferred color scheme, whether it’s the usual dark-on-light, light-on-dark (also known as dark mode), or a custom scheme.  
+
+## Wait! What’s going on here? Why do my slides look so different in Scribe for Meetings than they do in my presentation?
+
+Every aspect of how Scribe for Meetings displays your slides is optimized for accessibility, for attendees with all types of print impairments. Since Scribe for Meetings is meant to be used alongside your existing meeting platform, attendees are always free to flip back to the main meeting window to see the slides as they’re displayed in your presentation without accessibility.
+
+## I don’t use PowerPoint. Can I still make my presentation accessible with Scribe for Meetings?
+
+Scribe for Meetings can make your screen-shared slides accessible no matter what app you use to present them, as long as you can provide your slide deck in PowerPoint format. Other presentation apps such as Keynote and Google Slides can convert their slide decks to PowerPoint format, so you can use these with Scribe for Meetings.
+
+## Scribe for Meetings isn’t showing the accessible versions of my slides during the presentation, or it’s skipping some slides. What’s wrong?
+
+Make sure that you’re presenting your slides in a full-screen slide show, and that you’ve set up Zoom or Microsoft Teams screen sharing to share that slide show with your audience. If you’re using PowerPoint for Windows to run your presentation, then once you’ve opened PowerPoint, make sure you press F5 to enter slide show mode.
+[Learn more about how to use Zoom screen sharing with PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+[Learn how to use Microsoft Teams screen sharing with PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
+
+## How does Scribe for Meetings handle pictures and graphics in my slides?
+
+If you already wrote descriptions (also known as alt tags or captions) for the graphical content in your slides, Scribe for Meetings will use those. Otherwise, Scribe for Meetings will use a cloud-based image description service powered by machine learning to automatically add alt tags for your graphics. If those pictures contain text, Scribe for Meetings will also use optical character recognition (OCR) to make that text accessible.
+
+## My slides have charts, diagrams, or other complex graphics. Can Scribe for Meetings handle them?
+
+The short answer is, not for the most part. We’re still working on this. Because the Scribe Augmented Document Remediation platform is powered by machine learning, as we receive more documents and slide decks with complex graphics, we’ll be able to train our model to make those graphics accessible. But, for now, you’ll just have to try it and see.
+
+## Does Scribe for Meetings work with meeting platforms other than Zoom and Microsoft Teams, like Jitsi Meet, Google Meet, Slack, Amazon Chime, or BlueJeans?
+
+Not yet, but it will soon.
+
+## How do people within our organization log into Scribe for Meetings?
+
+Scribe for Meetings currently supports two options for authentication. The simplest option is our email-based login process. Just enter your email address, and we’ll send a link that you can use to log in; no password is needed. For organizations with more stringent security requirements, we can also integrate with single sign-on (SSO) systems that implement the SAML standard, either via the [InCommon](https://www.incommon.org/) federation or using bilateral metadata exchange. Our SAML service provider uses the open-source Shibboleth SP package and was implemented in partnership with [Signet, Inc.,](https://www.signet.id/) an identity management and access control firm founded by an architect of Shibboleth. Note that we support SSO through a variety of identity providers; in addition to Shibboleth IdP, we’ve tested with Azure Active Directory. When your organization signs up with Scribe for Meetings, we’ll offer SSO onboarding, covered by the setup fee.
+
+## What is the future of Scribe for Meetings?
+
+Scribe, the platform behind our Scribe line of products, is actively learning every time a document is processed. The machine learning powered Augmented Document Remediation technology gets smarter with each page, moving us that much closer to 100% accuracy. The benefits spill over into all our products, making Scribe for Meetings an application that will only get better the more you use it.
