--- a/src/content/docs/it/faq.mdx
+++ b/src/content/docs/it/faq.mdx
@@ -1,124 +1,139 @@
 ---
-title: Domande frequenti
+title: Frequently Asked questions
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
+Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
 
-Di seguito sono riportate le risposte ad alcune domande comuni riguardanti RIM. Quando si presenta un problema, fare riferimento a questo documento ogni volta che è possibile. Se la vostra domanda non è contenuta in questo documento, vi preghiamo di [Contattarci] (https://pneumasolutions.com/contact/)
-## Compatibilità
-### Quali versioni di Windows sono supportate?
-Supportiamo Windows7SP1 e successivi, nonché Windows Server2012 e successivi.
-### Quali versioni di Mac OS sono supportate?
-RIM supporta Mac OS Ventura e le versioni future, siano esse Intel o Apple Silicon. L'utente Mac può fornire supporto agli obiettivi Windows e gli utenti Windows possono fornire supporto al Mac.
-### E le versioni di Mac OS precedenti a Ventura?
-Alcune caratteristiche di RIM dipendono da funzionalità introdotte recentemente in Ventura, rendendo difficile la compatibilità con le versioni precedenti.
-## Installazione
-### Perché tante richieste di permessi su Mac OS?
-Questo purtroppo è fuori dal nostro controllo, in quanto Mac OS richiede che si utilizzino le loro vie per richiedere le autorizzazioni necessarie per RIM. Non abbiamo alcun controllo sull'interfaccia utente, quindi possiamo solo fornire il maggior numero di istruzioni possibile.
-## Informazioni sulla connessione
-### In generale, quanto è reattivo RIM?
-La latenza di andata e ritorno durante una sessione RIM è estremamente minima. Poiché non ci affidiamo a un servizio centrale, la maggior parte delle volte le connessioni sono dirette da un computer all'altro, il cosiddetto peer-to-peer. Se la configurazione della rete non consente le connessioni peer-to-peer, ci affidiamo a un numero qualsiasi di relè situati in tutto il mondo, anziché fare affidamento su un server centrale. Anche in questo caso, la latenza sarà comunque minima.
-### Dove si trovano i vostri relè?
-Attualmente offriamo relè nelle seguenti località:
-* STATI UNITI
-    * Virginia
-    * California
-* Teronto, Canada
-* Londra, Inghilterra
-* Varsavia, Polonia
-* Bangalore, India
-* Singapore
-* Sidney, Australia
-* San Paolo, Brasile
+## What is Scribe for Meetings?
 
-## Risoluzione dei problemi della sessione generale
-### La macchina di destinazione a cui sono collegato non risponde correttamente ai comandi da tastiera che funzionano bene sulla mia tastiera. Cosa succede?
-Il problema potrebbe essere dovuto a una di queste possibilità:
-* Un conflitto tra i layout di tastiera: In rare occasioni, se il layout della tastiera è sufficientemente diverso da quello dell'utente, RIM potrebbe confonderlo. In tal caso, contattateci con un rapporto contenente informazioni sul layout della tastiera di entrambi i computer.
-* Se il computer di destinazione utilizza JAWS 2024, la sua elaborazione unificata della tastiera a volte interferisce con l'uso del tasto CTRL per silenziare il parlato. Sebbene sia stata implementata una correzione per questo problema, a volte possono verificarsi dei problemi.
-    * Questo problema può essere risolto disabilitando l'elaborazione della tastiera unificata nel centro impostazioni di JAWS.
-    * L'elaborazione unificata della tastiera non è necessaria se l'utente di destinazione non utilizza anche ZoomText o Fusion.
-* Se il computer di destinazione utilizza NVDA e "Gestisci i tasti da altre applicazioni" è deselezionato, RIM non sarà in grado di elaborare l'input da tastiera dal controller.
-    * Si noti che questa impostazione è attiva per impostazione predefinita e nella maggior parte dei casi è consigliabile lasciarla attiva.
+Scribe for Meetings is a cloud-based technology that takes a shared presentation on platforms like Zoom, Microsoft Teams, Google Meet, and others and renders it into an accessible presentation in real time for print-impaired individuals.
 
-### Quando si avvia una conversazione vocale su Windows, RIM utilizza il microfono interno, indipendentemente dal microfono selezionato nelle impostazioni audio. Cosa c'è che non va?
+## Who benefits from Scribe for Meetings?
 
-Il problema potrebbe essere dovuto alla tecnologia Intel® Smart Sound per microfoni digitali presente su alcuni processori Intel più recenti. La disattivazione di questa tecnologia dovrebbe risolvere il problema. Per disattivare la tecnologia Intel® Smart Sound per i microfoni digitali, procedere come segue:
-1. Accedere alla casella di esecuzione (Windows+R).
-1. Digitare devmgmt.msc
-1. Nella struttura dei dispositivi, espandere "Controller audio, video e giochi"
-1. Fare clic con il pulsante destro del mouse su "Tecnologia audio intelligente Intel® per microfoni digitali" Scegliere "Disattiva dispositivo" dal menu contestuale.
+First and most importantly, the millions of print-impaired persons who would otherwise not benefit from the information being presented; and, the masses of businesses large and small, government agencies, all levels of education,, and organizations who know little about accessibility but would like an affordable means of making their content more inclusive.
 
-### L'obiettivo utilizza ZoomText. Come si può sperimentare l'output visivo reso da questo ingrandimento?
+## Why should I choose Scribe for Meetings over other products?
 
-Per ottenere questo risultato è necessario passare ZoomText alla modalità di compatibilità. Questa modalità consente di condividere i miglioramenti dello schermo tramite strumenti come Teams o Zoom, nonché RIM. È possibile attivarla tramite il menu di ZoomText: Aiuto &gt; Avanzamento &gt; Adattatore schermo. Nella finestra di dialogo aperta, selezionare la modalità di compatibilità e ZoomText si riavvierà. Si consiglia di riportare l'adattatore di visualizzazione alla modalità normale al termine della sessione RIM per ottenere prestazioni e qualità di ingrandimento ottimali. 
+We’re confident there is nothing else out there that does what we do quite the way we do it. Scribe for Meetings is the first technology of its kind to synchronize with meeting platforms in real time. Sure, competitors will take note and likely roll out their imitations, and we look forward to the competition ,but unless they plan on competing on price, we feel confident you will find what you need right here.
 
-### Dopo che un computer è stato reimpostato e riconfigurato con lo stesso nome di computer, è necessario fare qualcosa per far funzionare nuovamente RIM? 
-È sufficiente rimuovere il computer dall'account, reinstallare RIM, quindi aggiungere nuovamente il computer all'account.
+## How does Scribe for Meetings work?
 
-## Prezzi e pagamenti
-### Quindi, ricevere aiuto da una persona tramite RIM è totalmente gratuito, giusto?
-Ci puoi scommettere! Gli abbonamenti e/o i pagamenti una tantum sono destinati a privati e organizzazioni che desiderano offrire assistenza remota. Non c'è bisogno di preoccuparsi di sottoscrivere un abbonamento se si è la persona che riceve l'aiuto. In effetti, non è nemmeno necessario creare un account se si riceve semplicemente assistenza.
-### Non faccio assistenza remota regolarmente, ma potrei aiutare un amico o un familiare a volte. Esistono opzioni che non comportano un abbonamento?
-Certamente! Ci occupiamo di soddisfare il maggior numero possibile di casi d'uso.
-* Chiunque può assistere gratuitamente un utente tramite RIM per un massimo di 30 minuti al giorno. Quindi, se avete bisogno di aiutare qualcuno a installare un software, a risolvere un problema in fretta o a inviare qualche file, siamo a vostra disposizione. Questi minuti non devono essere utilizzati in una sola volta.
-* Ci sono ovviamente situazioni in cui un problema particolare richiede un po' più di tempo. O forse state assistendo qualcuno che sta imparando un nuovo software e potreste connettervi più volte nei prossimi giorni. È qui che entrano in gioco i nostri pass giornalieri e i pass per incidenti.
-    * I pass per incidenti consentono di connettersi a un singolo obiettivo tutte le volte che è necessario nell'arco di 24 ore.
-    * I pass giornalieri consentono di collegarsi a più obiettivi nell'arco di 24 ore.
-    * I pacchetti di ore prepagate consentono di avere a disposizione un numero prestabilito di ore da utilizzare interamente nel proprio tempo libero.
-* È possibile accumulare diversi pass e pacchetti di ore e utilizzarli quando è necessario. Se si dispone di più pass giornalieri, ad esempio, non è necessario utilizzarli consecutivamente. Allo stesso modo, non è necessario utilizzare le ore prepagate in un'unica sessione o in un periodo di 24 ore.
+If you are the host:
+1. Visit [ScribeForMeetings.com,](https://scribeformeetings.com) paste the invite link for your meeting, and press “Go”.
+1. Click the button to register your meeting.
+1. If prompted, enter your email address to log in. If you’re using Scribe for Meetings on behalf of an organization, make sure to use your email address provided by that organization. If your organization has integrated Scribe for Meetings with a single sign-on (SSO) system, then you’ll be taken to the normal login process for your organization, or possibly logged in automatically. Otherwise, we’ll send you an email with a link that you can use to log into Scribe for Meetings.
+1. Enter a name for your meeting, select your PowerPoint slide deck, and press “Submit”.
+    NOTE: Scribe for Meetings currently supports Zoom meetings, Zoom webinars and Microsoft Teams. Sign up to our email list to receive a notification when we add features and additional meeting platforms.
 
-### Ho acquistato un pacchetto di ore prepagate. Che cosa succede al mio numero di ore giornaliere gratuite?
-Buone notizie: l'assegnazione giornaliera gratuita di 30 minuti non va da nessuna parte! Quando si avvia una sessione basata su parole chiave, RIM inizierà a utilizzare l'assegnazione giornaliera gratuita di 30 minuti. Il tempo prepagato verrà utilizzato al termine dei 30 minuti gratuiti.
-### Quanto dureranno le mie ore prepagate? Sono legate al mio abbonamento?
-Le ore prepagate sono completamente separate dall'abbonamento. Detto questo, le ore prepagate rimarranno nel vostro account per un (1) anno dalla data in cui sono state utilizzate per la prima volta.
-### Come faccio a portare RIM all'attenzione del mio posto di lavoro?
-Abbiamo preparato un [Self-Advocacy Kit](https://sak.getrim.app) (SAK). Si tratta di un pacchetto di lettere formattate per e-mail che potete inviare alle persone competenti per conto vostro o di un dipendente. Per la cronaca, RIM offre le stesse funzionalità delle soluzioni tradizionali meno accessibili. Pertanto, RIM può sostituire un'infrastruttura esistente, piuttosto che affiancarla. È quindi considerato un accomodamento ragionevole per l'accessibilità e dovrebbe essere fornito dalla vostra organizzazione. L'accessibilità non è un favore, è un diritto all'inclusione.
-### Quali metodi di pagamento accettate?
-Elaboriamo i pagamenti tramite FastSpring, quindi siamo in grado di accettare direttamente una varietà di metodi di pagamento internazionali, tra cui le principali carte di credito, PayPal, Alipay e molti altri.
+Your content will be ready to launch within minutes. No knowledge of creating accessible presentations is required. As the host, you don’t need to run extra software on your device, and content can be uploaded as little as 5 minutes before the meeting.
+For the print-impaired meeting attendee, navigate to https://www.ScribeForMeetings.com, paste in your Zoom or Microsoft Teams invite link, and press “Go”. Alternatively, your meeting host might have given you a direct link to Scribe for Meetings, either in the invitation email or in the meeting itself via chat. Whichever way you get there, you’re now ready to follow along with the presentation in any web browser on any platform.
 
-### Come funzionano questi pass? L'orologio inizia immediatamente dopo il pagamento o il giorno in cui inizio la sessione?
-I pass iniziano solo quando il controller avvia la sessione. Quindi, se la macchina dell'obiettivo si guasta e richiede un viaggio in officina, e non è possibile ottenere un'uscita in giornata, potete semplicemente aspettare che la macchina torni in buone condizioni e il vostro pass giornaliero sarà ancora lì ad aspettarvi.
-### Questo significa che i pass non scadono?
-No. Siate certi che il vostro accumulo di pass giornalieri vi aspetterà pazientemente per essere attivato quando sarete pronti.
-### Cosa succede se mi collego a un'altra macchina nel giorno in cui è stato utilizzato un pass incidente?
-Dipende. Se il computer è all'interno del vostro abbonamento, cioè se state accedendo al vostro computer di casa mentre siete in viaggio, allora è tutto come al solito. Tutte le altre connessioni che non sono l'obiettivo iniziale a cui ci si è connessi funzioneranno con il consueto limite di 30 minuti.
-### Ho un abbonamento personale attivo. Potrei comunque assistere un utente al di fuori del gruppo di obiettivi per un massimo di 30 minuti o tramite un pass?
-Sì! Il vostro contingente giornaliero di 30 minuti è ancora valido per qualsiasi macchina al di fuori del vostro abbonamento. Inoltre, l'acquisto di un abbonamento non sostituisce i pass esistenti.
-### Ho un abbonamento personale e il computer di destinazione ha subito un aggiornamento hardware. Rim lo considererà come un cambio di macchina?
-Solo se RIM deve essere reinstallato. Quindi, mentre un aggiornamento del disco rigido o qualsiasi altra situazione che richieda una reinstallazione di Windows verrebbe considerata un cambio di macchina, l'aggiornamento della ram non lo sarebbe.
-### La nostra azienda ha acquistato l'abbonamento pro, ma abbiamo due tecnici: uno che si occupa dell'assistenza durante il giorno e un tecnico della manutenzione del sistema che lavora la sera. Potremmo assegnare al sysadmin serale un posto di controller?
-Certamente. In situazioni in cui più tecnici utilizzeranno RIM, offriamo fino a due (2) posti di controller aggiuntivi per 50 dollari al mese per posto - 500 dollari all'anno per posto - da abbinare al piano pro, se necessario. In questo modo sarà più facile per più controller in diverse postazioni di lavoro o uffici fornire assistenza remota.  
-Se si dispone di più postazioni di controllo, è possibile acquistare canali aggiuntivi per queste postazioni, in modo che le sessioni possano essere eseguite simultaneamente. Ogni canale aggiuntivo costa 50 dollari al mese o 500 dollari all'anno. 
+## How difficult is it to install Scribe for Meetings?
 
-## Sicurezza
-### Le sessioni RIM sono criptate?
-Sì. Tutte le sessioni su tutte le piattaforme, sia che si tratti di connessioni dirette peer-to-peer che di connessioni che utilizzano un relay, sono crittografate end-to-end utilizzando il Datagram Transport Layer Security (DTLS). Si tratta della stessa tecnologia presente nel protocollo HTTPS che i siti web moderni implementano per la sicurezza.
-### Pneuma Solutions può origliare le sessioni trasmesse dal cloud pubblico?
-No. La negoziazione della chiave di sessione e la crittografia vengono eseguite end-to-end tra il controller e il target. In altre parole, tutto viene crittografato prima ancora di lasciare il dispositivo. In questo modo, il servizio cloud si limita a trasmettere i dati così come sono, rendendo impossibile per il servizio decifrare i dati.
-### Quali misure sono state adottate per prevenire le vulnerabilità di esecuzione di codice remoto (RCE)?
-Tutto il codice RIM esposto a input dalla rete è scritto in [linguaggi di programmazione sicuri per la memoria](https://www.memorysafety.org/docs/memory-safety/), tra cui Rust e JavaScript.
-### RIM è conforme alla normativa HIPAA?
-Sì. La configurazione migliore in questo caso sarebbe un'implementazione on-premises, quindi vi preghiamo di [contattarci](https://pneumasolutions.com/contact/) se il vostro caso d'uso dipende da questo.
-### È necessario aprire qualche porta sul target o sul controller?
-No e no.
-### Quali connessioni devono essere consentite su una rete per far funzionare RIM?
-Quando si utilizza il cloud pubblico, è necessaria una connessione https a [getrim.app](https://getrim.app). In casi ottimali, questo è sufficiente per consentire a RIM di stabilire una connessione peer-to-peer tra il controller e il target. Tuttavia, è utile consentire le connessioni UDP attraverso le porte 19302 e 3478 (le porte standard STUN e TURN). In questo modo si garantisce che se si utilizza un relay, RIM non dovrà ripiegare su una connessione tcp sulla porta 443.
-### RIM viene eseguito in background e, in tal caso, appare nell'elenco Command+Tab?
-RIM viene eseguito in background per elaborare gli aggiornamenti automatici, ricevere le richieste di connessione non presidiate/provocate e consentire l'uso del comando globale da tastiera Opzione+Maiusc+Backspace. Non telefona a casa per nessun altro scopo e non vengono trasferite informazioni di identificazione personale.  
-RIM non apparirà nell'elenco Command+Tab, ma comparirà nei menu di stato che contengono le informazioni sulla batteria, sulla connessione WiFi, ecc.
-## Modulo di accessibilità remota
-### C'è qualcosa che il computer di destinazione deve configurare per il primo utilizzo del Remote Accessibility Module?
-Assolutamente no! Non ci sono finestre di dialogo, schermate di richiesta di autorizzazione o altro.
-### Il modulo di accessibilità remota funziona su schermate sicure come la schermata di blocco?
-Sì! Poiché l'host RIM viene eseguito con privilegi elevati, questo ci permette di sfruttare il Modulo di accessibilità remota per le schermate sicure. L'unica eccezione è la finestra di accesso di FileVault.
-## Sessioni non presidiate
-### Le conversazioni vocali sono supportate durante le sessioni non presidiate?
-No. Tuttavia, le sessioni richieste supportano le conversazioni vocali.
-### Se elimino una macchina non presidiata dal mio account controller, l'autorizzazione alla destinazione viene automaticamente revocata?
-Sì. Una volta rimosso un target non presidiato, la modifica avrà effetto immediato. Se il computer di destinazione è spento o comunque non connesso a Internet, la modifica sarà effettiva non appena verrà stabilita una connessione a Internet sul suo computer.
-### Il computer di destinazione si è riavviato dopo l'installazione degli aggiornamenti e dei driver e richiede una password per accedere. Come prosegue la sessione da qui?
-Nella maggior parte dei casi, in particolare quando è abilitata la crittografia del disco FileVault, l'utente di destinazione dovrà inserire manualmente la password. RIM non può avviarsi su un Mac crittografato prima che sia stato effettuato l'accesso completo.
-### Ho più macchine che svolgono il ruolo di controller. L'elenco delle macchine configurate per l'accesso non presidiato verrà popolato su tutte le macchine?
-Sì. L'elenco delle macchine configurate per l'accesso non presidiato è memorizzato all'interno del vostro account, quindi si popolerà automaticamente.
+Scribe for Meetings is not an installed application. It is a cloud service, so nothing more than a browser is needed to enjoy a meeting. For presenters, Other than uploading their content in advance of the meeting, the process was intentionally designed to be simple. There is nothing to install to your computer or device other than Zoom, Microsoft Teams or similar meeting platforms.
+Enterprise customers can host Scribe for Meetings on their own servers. Please get in touch with us for details.
+
+## I see an attendee named “Scribe for Meetings” trying to join my meeting. What’s going on?
+
+That’s the Scribe bot. This bot watches the screen in your meeting, so it can see what slide is currently being displayed and provide the accessible version of that slide in real time to print-impaired attendees. The Scribe bot will not disrupt your meeting in any way, and it will not collect any information other than what content is currently being displayed through screen sharing. If your meeting has a waiting room, please promptly admit the Scribe bot into the meeting. Otherwise, Scribe for Meetings will not work.
+
+## I’m a print-impaired meeting attendee, and I don’t know if the meeting I’m attending has been registered through Scribe for Meetings. What can I do?
+
+Go to [ScribeForMeetings.com](https://scribeformeetings.com), paste in the Zoom or Microsoft Teams invite link for your meeting, and press “Go”. If the meeting has been registered with Scribe for Meetings, then you’re ready to follow along with accessible slides. If not, you can sign up to be notified by email when the meeting has been registered with Scribe for Meetings.
+
+## I frequently attend Zoom or Microsoft Teams meetings. What’s the easiest way for me to find out if a meeting is registered with Scribe for Meetings, and if it is, view the accessible content?
+
+Scribe for Meetings has an [extension for Chrome and Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) that checks the availability on Scribe for Meetings of any Zoom or Microsoft Teams meeting you attend. With a single hotkey, you can view the accessible content if the meeting is registered, or request a follow-up notification if the meeting is registered with Scribe for Meetings later.
+
+## I’m a print-impaired meeting attendee. Do you have any resources to help me ask the meeting host to use Scribe for Meetings?
+
+Yes; check out our [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com). Here you’ll find a variety of pre-written letters that you can personalize, then copy and paste into an email.
+
+## Can Scribe for Meetings convert a presentation to accessible file formats for offline viewing?
+
+Yes. When creating the meeting, the presenter can optionally choose to provide their presentation for downloading in the following file formats:
+* An accessible web page, with all of the same features as the live presentation, including read aloud
+* Tagged PDF
+* MP3, via text-to-speech in about a dozen languages
+* DAISY, text plus audio
+* EPUB
+* Microsoft Word
+* Braille: Grade 1, Grade 2, Unified English Braille, and many other languages
+
+The PDF and Microsoft Word options support large print. This option, and other options such as speaking rate for audio output, can be chosen by attendees when they download the slides.
+This feature is not enabled by default; the presenter must choose to allow it. To enable this feature when registering a meeting, check the checkbox called “Allow attendees to download accessible versions of slides.” This choice will only take effect for the meeting currently being registered.
+For a meeting where this feature is enabled, as soon as the presenter has shown a slide, the web page where attendees view accessible slides will include a link called “Download Slides”. To download the slides, an attendee should follow these steps:
+1. Click the “Download Slides” link.
+1. If prompted, enter your email address and follow the instructions to log in.
+1. Choose the accessible format you want.
+1. For some formats, you can optionally customize settings, such as text-to-speech voice, speaking rate, braille translation table, or large print.
+1. Click the “Prepare Download” button.
+1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+
+## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
+
+Yes. Follow these steps:
+1. 
+Go to ScribeForMeetings.com.
+1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
+1. Click “Settings”, then “Meeting Defaults”.
+1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
+
+## I want to protect my slides from unauthorized copying and distribution. Does Scribe for Meetings support this?
+
+Unfortunately, Scribe for Meetings cannot stop your attendees from copying the text of your slides. However, if you don’t allow the slides to be downloaded, it won’t be easy for attendees to copy your slides, because they will have to copy one slide at a time. Also, note that in practice, this is no different from what any attendee can already do by taking screenshots of your slides.
+
+## Is Scribe for Meetings multilingual?
+
+Yes. Scribe for Meetings can render content in any of 140 languages, again with no extra effort from the presenter.
+
+## Do I need to slow down my presentation to make sure that print-impaired attendees can keep up?
+
+No. Scribe for Meetings has a feature called Dynamic Visual Representation, or DVR mode for short, that allows print-impaired attendees to read your accessible slides at their own pace. An attendee can pause the live presentation, go back to a slide they’ve already read, move forward at their own pace, and then continue with the live presentation when they’re ready.
+To use DVR mode, the attendee should press either the Suspend Presentation button or the Previous Slide button. These buttons are labeled as such for screen reader users, and for mouse users who hover over them. Visually, they’re at the bottom of the page and look like the Pause and Previous Track buttons in a media player. When the user presses one of these buttons, the live presentation will pause, and for the Previous Slide button, it will return to the previous slide. The user can then use the Previous Slide and Next Slide buttons to go through the slides at their own pace, and the Go Live button to return to the live presentation. These buttons look like the Previous Track, Next Track, and Play buttons in a media player.  
+Note that DVR mode only allows attendees to review slides that have been shown since they joined the presentation. If a print-impaired attendee is late for your presentation, then they missed the same slides that any other late attendee would have missed.
+
+## I have a print-impaired attendee who would benefit from having my content spoken aloud but isn’t comfortable with a full screen reader. Can Scribe for Meetings help?
+
+Yes. Our Read Aloud feature will speak your slides using the voices provided by your user’s device and web browser, while drawing a box around each word as it is spoken to help the user follow along visually. For Windows users, we highly recommend the Microsoft Edge browser for this feature, because Edge offers outstanding voices in several languages, free of charge. However, this feature also works with all other major platforms and browsers, including mobile devices.  
+To start reading the current slide aloud, press the Read Aloud button, which is at the bottom of the screen and looks like a speaker. While Scribe for Meetings is reading the slide aloud, it will show controls to stop reading (the button with a square icon), pause or resume, go back or forward (the buttons that look like Previous Track and Next Track buttons in a media player), speed up and slow down reading, or change the voice. These controls will go away as soon as reading is finished or as soon as the user stops it.  
+Note that Read Aloud and DVR mode (see above) can be used together, to allow print-impaired attendees to read slides both in their own way and at their own pace.
+
+## I have a print-impaired attendee who needs my slides in a large font but doesn’t need a full-screen magnification program. Can Scribe for Meetings help?
+
+Yes. Scribe for Meetings displays your slides in a way that makes them accessible for attendees with all types of content requirements. If large fonts are needed, an attendee can use their browser’s page zoom feature to adjust the font size of the slides, without requiring the user to continually scroll back and forth. Scribe for Meetings will also automatically display the text in the user’s preferred color scheme, whether it’s the usual dark-on-light, light-on-dark (also known as dark mode), or a custom scheme.  
+
+## Wait! What’s going on here? Why do my slides look so different in Scribe for Meetings than they do in my presentation?
+
+Every aspect of how Scribe for Meetings displays your slides is optimized for accessibility, for attendees with all types of print impairments. Since Scribe for Meetings is meant to be used alongside your existing meeting platform, attendees are always free to flip back to the main meeting window to see the slides as they’re displayed in your presentation without accessibility.
+
+## I don’t use PowerPoint. Can I still make my presentation accessible with Scribe for Meetings?
+
+Scribe for Meetings can make your screen-shared slides accessible no matter what app you use to present them, as long as you can provide your slide deck in PowerPoint format. Other presentation apps such as Keynote and Google Slides can convert their slide decks to PowerPoint format, so you can use these with Scribe for Meetings.
+
+## Scribe for Meetings isn’t showing the accessible versions of my slides during the presentation, or it’s skipping some slides. What’s wrong?
+
+Make sure that you’re presenting your slides in a full-screen slide show, and that you’ve set up Zoom or Microsoft Teams screen sharing to share that slide show with your audience. If you’re using PowerPoint for Windows to run your presentation, then once you’ve opened PowerPoint, make sure you press F5 to enter slide show mode.
+[Learn more about how to use Zoom screen sharing with PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+[Learn how to use Microsoft Teams screen sharing with PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
+
+## How does Scribe for Meetings handle pictures and graphics in my slides?
+
+If you already wrote descriptions (also known as alt tags or captions) for the graphical content in your slides, Scribe for Meetings will use those. Otherwise, Scribe for Meetings will use a cloud-based image description service powered by machine learning to automatically add alt tags for your graphics. If those pictures contain text, Scribe for Meetings will also use optical character recognition (OCR) to make that text accessible.
+
+## My slides have charts, diagrams, or other complex graphics. Can Scribe for Meetings handle them?
+
+The short answer is, not for the most part. We’re still working on this. Because the Scribe Augmented Document Remediation platform is powered by machine learning, as we receive more documents and slide decks with complex graphics, we’ll be able to train our model to make those graphics accessible. But, for now, you’ll just have to try it and see.
+
+## Does Scribe for Meetings work with meeting platforms other than Zoom and Microsoft Teams, like Jitsi Meet, Google Meet, Slack, Amazon Chime, or BlueJeans?
+
+Not yet, but it will soon.
+
+## How do people within our organization log into Scribe for Meetings?
+
+Scribe for Meetings currently supports two options for authentication. The simplest option is our email-based login process. Just enter your email address, and we’ll send a link that you can use to log in; no password is needed. For organizations with more stringent security requirements, we can also integrate with single sign-on (SSO) systems that implement the SAML standard, either via the [InCommon](https://www.incommon.org/) federation or using bilateral metadata exchange. Our SAML service provider uses the open-source Shibboleth SP package and was implemented in partnership with [Signet, Inc.,](https://www.signet.id/) an identity management and access control firm founded by an architect of Shibboleth. Note that we support SSO through a variety of identity providers; in addition to Shibboleth IdP, we’ve tested with Azure Active Directory. When your organization signs up with Scribe for Meetings, we’ll offer SSO onboarding, covered by the setup fee.
+
+## What is the future of Scribe for Meetings?
+
+Scribe, the platform behind our Scribe line of products, is actively learning every time a document is processed. The machine learning powered Augmented Document Remediation technology gets smarter with each page, moving us that much closer to 100% accuracy. The benefits spill over into all our products, making Scribe for Meetings an application that will only get better the more you use it.
