--- a/src/content/docs/pt/faq.mdx
+++ b/src/content/docs/pt/faq.mdx
@@ -1,124 +1,139 @@
 ---
-title: Perguntas frequentes
+title: Frequently Asked questions
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
+Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
 
-Aqui estão as respostas para algumas perguntas comuns sobre a RIM. Ao se deparar com um problema, consulte este documento sempre que possível. Se a sua dúvida não for abordada neste documento, entre em contato conosco (https://pneumasolutions.com/contact/)
-## Compatibilidade
-### Quais versões do Windows são compatíveis?
-Oferecemos suporte ao Windows7SP1 e superior, bem como ao Windows Server2012 e superior.
-### Quais versões do Mac OS são compatíveis?
-A RIM oferece suporte ao Mac OS Ventura e a versões futuras, sejam elas Intel ou Apple Silicon. Você, como usuário de Mac, pode fornecer suporte aos alvos do Windows, e os usuários do Windows podem fornecer suporte ao seu Mac.
-### E quanto às versões do Mac OS anteriores ao Ventura?
-Alguns recursos do RIM dependem da funcionalidade recém-introduzida no Ventura, o que dificulta a implementação da compatibilidade com versões anteriores.
-## Instalação
-### Por que tantas solicitações de permissão no Mac OS?
-Infelizmente, isso está fora do nosso controle, pois o Mac OS exige que usemos seus meios para solicitar as permissões necessárias para o RIM. Não temos controle sobre a experiência do usuário, portanto, só podemos fornecer o máximo de instruções que pudermos.
-## Informações de conexão
-### De modo geral, qual é a capacidade de resposta da RIM?
-A latência de ida e volta durante uma sessão da RIM é extremamente mínima. Como não dependemos de um serviço central, na maioria das vezes suas conexões são diretas de um computador para outro - isso é conhecido como ponto a ponto. Se a sua configuração de rede não permitir conexões ponto a ponto, recorreremos a qualquer número de retransmissores localizados em todo o mundo em vez de depender de um servidor central. Portanto, mesmo assim, sua latência ainda será bem mínima.
-### Onde estão localizados os retransmissores?
-Atualmente, oferecemos retransmissores nos seguintes locais:
-* EUA
-    * Virgínia
-    * Califórnia
-* Teronto, Canadá
-* Londres, Inglaterra
-* Varsóvia, Polônia
-* Bangalore, Índia
-* Cingapura
-* Sidney, Austrália
-* São Paulo, Brasil
+## What is Scribe for Meetings?
 
-## Solução de problemas da sessão geral
-### A máquina de destino à qual estou conectado não responde adequadamente aos comandos de teclado que funcionam bem no meu teclado. O que está acontecendo?
-Isso pode se dever a qualquer uma das seguintes possibilidades:
-* Um conflito nos layouts de teclado: Em raras ocasiões, se um layout de teclado for diferente o suficiente do seu, ele poderá confundir a RIM. Se isso ocorrer, entre em contato conosco com um relatório contendo informações sobre o layout do teclado de ambas as máquinas.
-* Se o computador de destino estiver usando o JAWS 2024, o processamento unificado do teclado às vezes interfere no uso da tecla CTRL para silenciar a fala. Embora tenhamos implementado uma correção para isso, às vezes ainda podem surgir problemas.
-    * Esse problema pode ser resolvido desativando o processamento de teclado unificado na central de configurações do JAWS.
-    * O processamento de teclado unificado não é necessário se o usuário-alvo também não estiver usando o ZoomText ou o Fusion.
-* Se o computador de destino estiver usando o NVDA e tiver a opção "Manipular teclas de outros aplicativos" desmarcada, o RIM não poderá processar a entrada de teclado do controlador.
-    * Observe que essa configuração está ativada por padrão e, na maioria dos casos, é recomendável deixá-la ativada.
+Scribe for Meetings is a cloud-based technology that takes a shared presentation on platforms like Zoom, Microsoft Teams, Google Meet, and others and renders it into an accessible presentation in real time for print-impaired individuals.
 
-### Ao iniciar uma conversa por voz no Windows, a RIM usa o microfone interno, independentemente do microfone que eu selecionar nas configurações de som. O que há de errado?
+## Who benefits from Scribe for Meetings?
 
-Isso pode ser devido à tecnologia Intel® Smart Sound para microfones digitais em alguns processadores Intel mais recentes. A desativação dessa tecnologia deve resolver o problema. Para desativar a tecnologia Intel® Smart Sound para microfones digitais, faça o seguinte:
-1. Vá para a caixa de execução (Windows+R).
-1. Digite devmgmt.msc
-1. Na árvore de dispositivos, expanda "Controladores de som, vídeo e jogos"
-1. Clique com o botão direito do mouse em "Tecnologia de som inteligente Intel® para microfones digitais" Escolha "Desativar dispositivo" no menu de contexto.
+First and most importantly, the millions of print-impaired persons who would otherwise not benefit from the information being presented; and, the masses of businesses large and small, government agencies, all levels of education,, and organizations who know little about accessibility but would like an affordable means of making their content more inclusive.
 
-### O alvo está usando o ZoomText. Como posso experimentar a saída visual conforme renderizada por essa ampliação?
+## Why should I choose Scribe for Meetings over other products?
 
-Isso é feito alternando o ZoomText para o modo de compatibilidade. Esse modo permite que os aprimoramentos de tela sejam compartilhados por meio de ferramentas como Teams ou Zoom, bem como RIM. Você pode ativá-lo no menu do ZoomText: Ajuda &gt; Avançar &gt; Adaptador de tela. Na caixa de diálogo aberta, selecione o modo de compatibilidade e o ZoomText será reiniciado. Recomendamos mudar o adaptador de vídeo de volta para o modo normal após a conclusão da sessão de RIM para otimizar o desempenho e a qualidade da ampliação. 
+We’re confident there is nothing else out there that does what we do quite the way we do it. Scribe for Meetings is the first technology of its kind to synchronize with meeting platforms in real time. Sure, competitors will take note and likely roll out their imitations, and we look forward to the competition ,but unless they plan on competing on price, we feel confident you will find what you need right here.
 
-### Depois que um computador é recriado e reconfigurado com o mesmo nome de computador, há algo que precise ser feito para que o RIM volte a funcionar? 
-Basta remover a máquina da sua conta, reinstalar o RIM e adicionar a máquina novamente à sua conta.
+## How does Scribe for Meetings work?
 
-## Preços e pagamentos
-### Então, obter ajuda de uma pessoa pelo RIM é totalmente gratuito, certo?
-Pode apostar! As assinaturas e/ou pagamentos únicos são para indivíduos e organizações que desejam oferecer assistência remota. Não é necessário se preocupar em obter uma assinatura se você for a pessoa que está recebendo ajuda. Na verdade, você nem precisa criar uma conta se estiver apenas recebendo ajuda.
-### Não presto assistência remota regularmente, mas posso estar ajudando um amigo ou membro da família ocasionalmente. Há alguma opção que não envolva uma assinatura?
-Com certeza! Nós acomodamos o maior número possível de casos de uso.
-* Qualquer pessoa pode ajudar um usuário pela RIM gratuitamente por até 30 minutos por dia. Portanto, se você precisar ajudar alguém a instalar um software, resolver um problema rapidamente ou enviar alguns arquivos, nós temos o que você precisa. Esses minutos não precisam ser usados de uma só vez.
-* É claro que haverá situações em que um determinado problema exigirá um pouco mais de tempo. Ou talvez você esteja ajudando alguém a aprender um novo software e talvez se conecte de vez em quando nos próximos dias. É aí que entram os nossos passes diários e passes para incidentes.
-    * Os passes de incidentes permitem que você se conecte a um único alvo quantas vezes forem necessárias em um período de 24 horas.
-    * Os passes diários permitem que você se conecte a vários alvos em um período de 24 horas.
-    * Os pacotes de horas pré-pagas permitem que você tenha um número definido de horas disponíveis para serem usadas inteiramente em seu próprio tempo.
-* Você pode acumular vários desses passes e pacotes de horas e usá-los sempre que necessário. Se você tiver vários passes diários, por exemplo, não precisará usá-los consecutivamente. Da mesma forma, não é necessário usar as horas pré-pagas em uma única sessão ou período de 24 horas.
+If you are the host:
+1. Visit [ScribeForMeetings.com,](https://scribeformeetings.com) paste the invite link for your meeting, and press “Go”.
+1. Click the button to register your meeting.
+1. If prompted, enter your email address to log in. If you’re using Scribe for Meetings on behalf of an organization, make sure to use your email address provided by that organization. If your organization has integrated Scribe for Meetings with a single sign-on (SSO) system, then you’ll be taken to the normal login process for your organization, or possibly logged in automatically. Otherwise, we’ll send you an email with a link that you can use to log into Scribe for Meetings.
+1. Enter a name for your meeting, select your PowerPoint slide deck, and press “Submit”.
+    NOTE: Scribe for Meetings currently supports Zoom meetings, Zoom webinars and Microsoft Teams. Sign up to our email list to receive a notification when we add features and additional meeting platforms.
 
-### Comprei um pacote de horas pré-pagas. O que acontece com minha cota diária gratuita?
-Boas notícias: sua cota diária gratuita de 30 minutos não vai a lugar algum! Quando você iniciar uma sessão baseada em palavras-chave, a RIM começará usando sua cota diária gratuita de 30 minutos. Seu tempo pré-pago será usado após o término dos 30 minutos gratuitos.
-### Quanto tempo durarão minhas horas pré-pagas? Elas estão vinculadas à minha assinatura?
-As horas pré-pagas são totalmente separadas de sua assinatura. Dito isso, suas horas pré-pagas permanecerão em sua conta por um (1) ano após a data em que foram usadas pela primeira vez.
-### Como faço para chamar a atenção do meu local de trabalho para a RIM?
-Nós montamos um [Self-Advocacy Kit] (https://sak.getrim.app) (SAK). Um pacote de cartas formatadas por e-mail que você pode enviar às pessoas apropriadas em seu nome ou em nome de um funcionário. Para fins de registro, o RIM oferece a mesma funcionalidade que as soluções convencionais menos acessíveis. Dessa forma, o RIM pode substituir uma infraestrutura existente, em vez de ser usado junto com ela. Portanto, ele é considerado uma acomodação de acessibilidade razoável e deve ser fornecido a você pela sua organização. A acessibilidade não é um favor, é um direito à inclusão.
-### Quais métodos de pagamento vocês aceitam?
-Processamos pagamentos por meio do FastSpring, portanto, podemos aceitar diretamente uma variedade de métodos de pagamento internacionais, incluindo os principais cartões de crédito, PayPal, Alipay e muitos outros.
+Your content will be ready to launch within minutes. No knowledge of creating accessible presentations is required. As the host, you don’t need to run extra software on your device, and content can be uploaded as little as 5 minutes before the meeting.
+For the print-impaired meeting attendee, navigate to https://www.ScribeForMeetings.com, paste in your Zoom or Microsoft Teams invite link, and press “Go”. Alternatively, your meeting host might have given you a direct link to Scribe for Meetings, either in the invitation email or in the meeting itself via chat. Whichever way you get there, you’re now ready to follow along with the presentation in any web browser on any platform.
 
-### Como esses passes funcionam? O relógio começa imediatamente após o pagamento ou no dia em que eu iniciar a sessão?
-Os passes só começam quando o controlador inicia a sessão. Portanto, se a máquina do alvo falhar, exigindo uma ida à oficina, e não for possível uma entrega no mesmo dia, você pode simplesmente esperar até que a máquina esteja de volta em boas condições e o seu passe diário ainda estará esperando por você.
-### Então isso significa que esses passes não expiram?
-Não. Fique tranquilo, pois seu acúmulo de passes diários estará esperando pacientemente para que você os ative quando estiver pronto.
-### O que acontece se eu me conectar a outra máquina no dia em que um passe de incidente foi usado?
-Isso depende. Se a máquina estiver dentro da sua assinatura, ou seja, se você estiver acessando a máquina de sua casa enquanto estiver viajando, tudo correrá normalmente. Quaisquer outras conexões que não sejam o alvo inicial ao qual você se conectou funcionarão de acordo com a cota usual de 30 minutos.
-### Tenho uma assinatura pessoal ativa. Ainda poderei ajudar um usuário fora do grupo de alvos por até 30 minutos ou por meio de um passe?
-Sim! Sua cota diária de 30 minutos ainda está disponível para qualquer máquina fora da sua assinatura. Além disso, a aquisição de uma assinatura não substitui os passes existentes que você possa ter.
-### Tenho uma assinatura pessoal e o computador de destino passou por uma atualização de hardware. A Rim considerará isso como uma troca de máquina?
-Somente se o RIM precisar ser reinstalado. Portanto, embora uma atualização do disco rígido ou qualquer outra situação que exija a reinstalação do Windows seja considerada uma troca de máquina, a atualização da memória RAM não é considerada.
-### Nossa empresa comprou a assinatura pro, mas temos dois técnicos - um que trabalha no help-desk durante o dia e um técnico de manutenção de sistemas que trabalha à noite. Poderíamos atribuir ao administrador de sistemas noturno um assento de controlador?
-Sem dúvida. Em situações em que várias técnicas estarão usando a RIM, oferecemos até dois (2) assentos de controlador adicionais por US$ 50 por mês por assento - US$ 500 por ano por assento - para acompanhar o plano pro, se necessário. Isso facilitará o fornecimento de suporte remoto para vários controladores em diferentes estações de trabalho ou escritórios.  
-Se você tiver vários assentos de controlador, poderá adquirir canais adicionais para eles, de modo que as sessões possam ser executadas simultaneamente. Cada canal adicional custa US$ 50 por mês ou US$ 500 por ano. 
+## How difficult is it to install Scribe for Meetings?
 
-## Segurança
-### As sessões da RIM são criptografadas?
-Sim. Todas as sessões em todas as plataformas, sejam elas conexões diretas ponto a ponto ou conexões usando um relé, são criptografadas de ponta a ponta usando o Datagram Transport Layer Security (DTLS). Essa é a mesma tecnologia vista no protocolo HTTPS que os sites modernos implementam para segurança.
-### A Pneuma Solutions pode espionar as sessões retransmitidas pela nuvem pública?
-Não. A negociação e a criptografia da chave de sessão são realizadas de ponta a ponta entre o controlador e o destino. Em outras palavras, tudo é criptografado antes mesmo de sair do seu dispositivo. Dessa forma, o serviço de nuvem apenas retransmite os dados como estão, tornando impossível para o serviço decifrar os dados.
-### Que medidas foram tomadas para evitar vulnerabilidades de execução remota de código (RCE)?
-Todo o código da RIM que é exposto à entrada da rede é escrito em [linguagens de programação seguras para memória] (https://www.memorysafety.org/docs/memory-safety/), incluindo Rust e JavaScript.
-### A RIM está em conformidade com a HIPAA?
-Sim. A melhor configuração nesse caso seria uma implantação no local, portanto, [entre em contato conosco](https://pneumasolutions.com/contact/) se o seu caso de uso depender disso.
-### Alguma porta precisa ser aberta no destino ou no controlador?
-Não e não.
-### Que conexões precisam ser permitidas em uma rede para que o RIM funcione?
-Ao utilizar a nuvem pública, é necessária uma conexão https para [getrim.app] (https://getrim.app). Em casos ideais, isso é suficiente para que a RIM estabeleça uma conexão ponto a ponto entre o controlador e o destino. No entanto, é útil permitir conexões UDP por meio das portas 19302 e 3478 (as portas STUN e TURN padrão). Isso garante que, se um relé estiver sendo utilizado, o RIM não precisará voltar para uma conexão tcp na porta 443.
-### O RIM é executado em segundo plano e, se for o caso, ele aparecerá na minha lista Command+Tab?
-O RIM é executado em segundo plano para processar atualizações automáticas, receber solicitações de conexão não assistidas/promovidas e permitir o uso do comando de teclado global Option+Shift+Backspace. Ele não telefonará para casa para nenhuma outra finalidade, e nenhuma informação pessoal identificável é transferida.  
-O RIM não aparecerá em sua lista Command+Tab, mas aparecerá nos menus de status que contêm informações sobre a bateria, a conexão WiFi, etc.
-## Módulo de acessibilidade remota
-### Existe alguma coisa que a máquina de destino precise configurar para usar o Remote Accessibility Module pela primeira vez?
-De forma alguma! Não há caixas de diálogo, telas de solicitação de permissão ou algo do gênero.
-### O módulo de acessibilidade remota funciona em telas seguras, como a tela de bloqueio?
-Sim! Como o host da RIM é executado com privilégios elevados, isso nos permite aproveitar o Remote Accessibility Module para telas seguras. A única exceção a isso é a janela de logon do FileVault.
-## Sessões sem supervisão
-### Há suporte para conversas por voz durante sessões sem supervisão?
-Não. No entanto, as sessões solicitadas são compatíveis com conversas por voz.
-### Se eu excluir uma máquina autônoma da minha conta de controlador, isso revogará automaticamente a permissão no destino?
-Sim. Quando um alvo autônomo for removido, a alteração entrará em vigor imediatamente. Se a máquina de destino estiver desligada ou não estiver conectada à Internet, a alteração entrará em vigor assim que uma conexão com a Internet for estabelecida na máquina.
-### A máquina de destino foi reinicializada após a instalação de atualizações e drivers e requer uma senha para fazer login. Como a sessão continua a partir daqui?
-Na maioria dos casos, especialmente quando a criptografia de disco FileVault está ativada, o usuário de destino precisará digitar a senha manualmente. O RIM não pode ser iniciado em um Mac criptografado antes que ele tenha sido totalmente conectado.
-### Tenho várias máquinas desempenhando o papel de controlador. A lista de máquinas configuradas para acesso autônomo será preenchida em todas as máquinas?
-Sim. A lista de máquinas configuradas para acesso não supervisionado é armazenada em sua conta, portanto, será preenchida automaticamente.
+Scribe for Meetings is not an installed application. It is a cloud service, so nothing more than a browser is needed to enjoy a meeting. For presenters, Other than uploading their content in advance of the meeting, the process was intentionally designed to be simple. There is nothing to install to your computer or device other than Zoom, Microsoft Teams or similar meeting platforms.
+Enterprise customers can host Scribe for Meetings on their own servers. Please get in touch with us for details.
+
+## I see an attendee named “Scribe for Meetings” trying to join my meeting. What’s going on?
+
+That’s the Scribe bot. This bot watches the screen in your meeting, so it can see what slide is currently being displayed and provide the accessible version of that slide in real time to print-impaired attendees. The Scribe bot will not disrupt your meeting in any way, and it will not collect any information other than what content is currently being displayed through screen sharing. If your meeting has a waiting room, please promptly admit the Scribe bot into the meeting. Otherwise, Scribe for Meetings will not work.
+
+## I’m a print-impaired meeting attendee, and I don’t know if the meeting I’m attending has been registered through Scribe for Meetings. What can I do?
+
+Go to [ScribeForMeetings.com](https://scribeformeetings.com), paste in the Zoom or Microsoft Teams invite link for your meeting, and press “Go”. If the meeting has been registered with Scribe for Meetings, then you’re ready to follow along with accessible slides. If not, you can sign up to be notified by email when the meeting has been registered with Scribe for Meetings.
+
+## I frequently attend Zoom or Microsoft Teams meetings. What’s the easiest way for me to find out if a meeting is registered with Scribe for Meetings, and if it is, view the accessible content?
+
+Scribe for Meetings has an [extension for Chrome and Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) that checks the availability on Scribe for Meetings of any Zoom or Microsoft Teams meeting you attend. With a single hotkey, you can view the accessible content if the meeting is registered, or request a follow-up notification if the meeting is registered with Scribe for Meetings later.
+
+## I’m a print-impaired meeting attendee. Do you have any resources to help me ask the meeting host to use Scribe for Meetings?
+
+Yes; check out our [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com). Here you’ll find a variety of pre-written letters that you can personalize, then copy and paste into an email.
+
+## Can Scribe for Meetings convert a presentation to accessible file formats for offline viewing?
+
+Yes. When creating the meeting, the presenter can optionally choose to provide their presentation for downloading in the following file formats:
+* An accessible web page, with all of the same features as the live presentation, including read aloud
+* Tagged PDF
+* MP3, via text-to-speech in about a dozen languages
+* DAISY, text plus audio
+* EPUB
+* Microsoft Word
+* Braille: Grade 1, Grade 2, Unified English Braille, and many other languages
+
+The PDF and Microsoft Word options support large print. This option, and other options such as speaking rate for audio output, can be chosen by attendees when they download the slides.
+This feature is not enabled by default; the presenter must choose to allow it. To enable this feature when registering a meeting, check the checkbox called “Allow attendees to download accessible versions of slides.” This choice will only take effect for the meeting currently being registered.
+For a meeting where this feature is enabled, as soon as the presenter has shown a slide, the web page where attendees view accessible slides will include a link called “Download Slides”. To download the slides, an attendee should follow these steps:
+1. Click the “Download Slides” link.
+1. If prompted, enter your email address and follow the instructions to log in.
+1. Choose the accessible format you want.
+1. For some formats, you can optionally customize settings, such as text-to-speech voice, speaking rate, braille translation table, or large print.
+1. Click the “Prepare Download” button.
+1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+
+## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
+
+Yes. Follow these steps:
+1. 
+Go to ScribeForMeetings.com.
+1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
+1. Click “Settings”, then “Meeting Defaults”.
+1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
+
+## I want to protect my slides from unauthorized copying and distribution. Does Scribe for Meetings support this?
+
+Unfortunately, Scribe for Meetings cannot stop your attendees from copying the text of your slides. However, if you don’t allow the slides to be downloaded, it won’t be easy for attendees to copy your slides, because they will have to copy one slide at a time. Also, note that in practice, this is no different from what any attendee can already do by taking screenshots of your slides.
+
+## Is Scribe for Meetings multilingual?
+
+Yes. Scribe for Meetings can render content in any of 140 languages, again with no extra effort from the presenter.
+
+## Do I need to slow down my presentation to make sure that print-impaired attendees can keep up?
+
+No. Scribe for Meetings has a feature called Dynamic Visual Representation, or DVR mode for short, that allows print-impaired attendees to read your accessible slides at their own pace. An attendee can pause the live presentation, go back to a slide they’ve already read, move forward at their own pace, and then continue with the live presentation when they’re ready.
+To use DVR mode, the attendee should press either the Suspend Presentation button or the Previous Slide button. These buttons are labeled as such for screen reader users, and for mouse users who hover over them. Visually, they’re at the bottom of the page and look like the Pause and Previous Track buttons in a media player. When the user presses one of these buttons, the live presentation will pause, and for the Previous Slide button, it will return to the previous slide. The user can then use the Previous Slide and Next Slide buttons to go through the slides at their own pace, and the Go Live button to return to the live presentation. These buttons look like the Previous Track, Next Track, and Play buttons in a media player.  
+Note that DVR mode only allows attendees to review slides that have been shown since they joined the presentation. If a print-impaired attendee is late for your presentation, then they missed the same slides that any other late attendee would have missed.
+
+## I have a print-impaired attendee who would benefit from having my content spoken aloud but isn’t comfortable with a full screen reader. Can Scribe for Meetings help?
+
+Yes. Our Read Aloud feature will speak your slides using the voices provided by your user’s device and web browser, while drawing a box around each word as it is spoken to help the user follow along visually. For Windows users, we highly recommend the Microsoft Edge browser for this feature, because Edge offers outstanding voices in several languages, free of charge. However, this feature also works with all other major platforms and browsers, including mobile devices.  
+To start reading the current slide aloud, press the Read Aloud button, which is at the bottom of the screen and looks like a speaker. While Scribe for Meetings is reading the slide aloud, it will show controls to stop reading (the button with a square icon), pause or resume, go back or forward (the buttons that look like Previous Track and Next Track buttons in a media player), speed up and slow down reading, or change the voice. These controls will go away as soon as reading is finished or as soon as the user stops it.  
+Note that Read Aloud and DVR mode (see above) can be used together, to allow print-impaired attendees to read slides both in their own way and at their own pace.
+
+## I have a print-impaired attendee who needs my slides in a large font but doesn’t need a full-screen magnification program. Can Scribe for Meetings help?
+
+Yes. Scribe for Meetings displays your slides in a way that makes them accessible for attendees with all types of content requirements. If large fonts are needed, an attendee can use their browser’s page zoom feature to adjust the font size of the slides, without requiring the user to continually scroll back and forth. Scribe for Meetings will also automatically display the text in the user’s preferred color scheme, whether it’s the usual dark-on-light, light-on-dark (also known as dark mode), or a custom scheme.  
+
+## Wait! What’s going on here? Why do my slides look so different in Scribe for Meetings than they do in my presentation?
+
+Every aspect of how Scribe for Meetings displays your slides is optimized for accessibility, for attendees with all types of print impairments. Since Scribe for Meetings is meant to be used alongside your existing meeting platform, attendees are always free to flip back to the main meeting window to see the slides as they’re displayed in your presentation without accessibility.
+
+## I don’t use PowerPoint. Can I still make my presentation accessible with Scribe for Meetings?
+
+Scribe for Meetings can make your screen-shared slides accessible no matter what app you use to present them, as long as you can provide your slide deck in PowerPoint format. Other presentation apps such as Keynote and Google Slides can convert their slide decks to PowerPoint format, so you can use these with Scribe for Meetings.
+
+## Scribe for Meetings isn’t showing the accessible versions of my slides during the presentation, or it’s skipping some slides. What’s wrong?
+
+Make sure that you’re presenting your slides in a full-screen slide show, and that you’ve set up Zoom or Microsoft Teams screen sharing to share that slide show with your audience. If you’re using PowerPoint for Windows to run your presentation, then once you’ve opened PowerPoint, make sure you press F5 to enter slide show mode.
+[Learn more about how to use Zoom screen sharing with PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+[Learn how to use Microsoft Teams screen sharing with PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
+
+## How does Scribe for Meetings handle pictures and graphics in my slides?
+
+If you already wrote descriptions (also known as alt tags or captions) for the graphical content in your slides, Scribe for Meetings will use those. Otherwise, Scribe for Meetings will use a cloud-based image description service powered by machine learning to automatically add alt tags for your graphics. If those pictures contain text, Scribe for Meetings will also use optical character recognition (OCR) to make that text accessible.
+
+## My slides have charts, diagrams, or other complex graphics. Can Scribe for Meetings handle them?
+
+The short answer is, not for the most part. We’re still working on this. Because the Scribe Augmented Document Remediation platform is powered by machine learning, as we receive more documents and slide decks with complex graphics, we’ll be able to train our model to make those graphics accessible. But, for now, you’ll just have to try it and see.
+
+## Does Scribe for Meetings work with meeting platforms other than Zoom and Microsoft Teams, like Jitsi Meet, Google Meet, Slack, Amazon Chime, or BlueJeans?
+
+Not yet, but it will soon.
+
+## How do people within our organization log into Scribe for Meetings?
+
+Scribe for Meetings currently supports two options for authentication. The simplest option is our email-based login process. Just enter your email address, and we’ll send a link that you can use to log in; no password is needed. For organizations with more stringent security requirements, we can also integrate with single sign-on (SSO) systems that implement the SAML standard, either via the [InCommon](https://www.incommon.org/) federation or using bilateral metadata exchange. Our SAML service provider uses the open-source Shibboleth SP package and was implemented in partnership with [Signet, Inc.,](https://www.signet.id/) an identity management and access control firm founded by an architect of Shibboleth. Note that we support SSO through a variety of identity providers; in addition to Shibboleth IdP, we’ve tested with Azure Active Directory. When your organization signs up with Scribe for Meetings, we’ll offer SSO onboarding, covered by the setup fee.
+
+## What is the future of Scribe for Meetings?
+
+Scribe, the platform behind our Scribe line of products, is actively learning every time a document is processed. The machine learning powered Augmented Document Remediation technology gets smarter with each page, moving us that much closer to 100% accuracy. The benefits spill over into all our products, making Scribe for Meetings an application that will only get better the more you use it.
