--- a/src/content/docs/sv/faq.mdx
+++ b/src/content/docs/sv/faq.mdx
@@ -1,124 +1,139 @@
 ---
-title: Vanliga frågor och svar
+title: Frequently Asked questions
 ---
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+Here are answers to some common questions concerning Scribe for Meetings. When faced with an issue, please refer to this document whenever possible.  
+Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
 
-Här finns svar på några vanliga frågor om RIM. När du ställs inför ett problem, vänligen hänvisa till detta dokument när det är möjligt. Om din fråga inte behandlas i detta dokument, vänligen [Kontakta oss.](https://pneumasolutions.com/contact/)
-## Kompatibilitet
-### Vilka Windows-versioner stöds?
-Vi stöder Windows7SP1 och senare, samt Windows Server2012 och senare.
-### Vilka Mac OS-versioner stöds?
-RIM stöder Mac OS Ventura tillsammans med framtida versioner, oavsett om de är Intel eller Apple Silicon. Du som Mac-användare kan ge support till Windows-användare, och Windows-användare kan ge support till din Mac.
-### Hur är det med Mac OS-versioner före Ventura?
-Vissa funktioner i RIM är beroende av funktioner som nyligen introducerats i Ventura, vilket gör det svårt att implementera kompatibilitet med tidigare versioner.
-## Installation
-### Varför så många behörighetsförfrågningar för Mac OS?
-Detta ligger tyvärr utanför vår kontroll, eftersom Mac OS kräver att vi använder deras vägar för att begära de nödvändiga behörigheter som behövs för RIM. Vi har ingen kontroll över UX, så vi kan bara gå så långt som att ge så mycket instruktioner som vi kan.
-## Information om anslutningar
-### Generellt sett, hur responsiv är RIM?
-Latensen under en RIM-session är extremt minimal. Eftersom vi inte förlitar oss på en central tjänst är dina anslutningar för det mesta direkta från en dator till en annan - detta är vad som kallas peer-to-peer. Om din nätverkskonfiguration inte tillåter peer-to-peer-anslutningar använder vi oss av ett antal reläer runt om i världen i stället för att förlita oss på en central server. Även då kommer din latens att vara mycket minimal.
-### Var finns era reläer?
-För närvarande erbjuder vi reläer på följande platser:
-* USA
-    * Virginia
-    * Kalifornien
-* Teronto, Kanada
-* London, England
-* Warszawa, Polen
-* Bangalore, Indien
-* Singapore
-* Sidney, Australien
-* Sao Paulo, Brasilien
+## What is Scribe for Meetings?
 
-## Allmän session Felsökning
-### Måldatorn som jag är ansluten till reagerar inte korrekt på tangentbordskommandon som fungerar bra på mitt tangentbord. Vad är det som händer?
-Detta kan bero på någon av följande möjligheter:
-* En konflikt mellan tangentbordslayouter: I sällsynta fall, om en tangentbordslayout skiljer sig tillräckligt mycket från din egen, kan det förvirra RIM. Om detta inträffar ber vi dig att kontakta oss med en rapport som innehåller information om tangentbordslayouten på båda maskinerna.
-* Om målmaskinen använder JAWS 2024 kan dess enhetliga tangentbordsbehandling ibland störa användningen av CTRL-tangenten för att tysta tal. Även om vi har distribuerat en fix för detta kan problem ibland fortfarande uppstå.
-    * Detta problem kan lösas genom att inaktivera enhetlig tangentbordsbehandling i JAWS inställningscenter.
-    * Unified Keyboard Processing är inte nödvändigt om målanvändaren inte också använder ZoomText eller Fusion.
-* Om målmaskinen använder NVDA och har "Hantera tangenter från andra program" avmarkerat, kommer RIM inte att kunna bearbeta tangentbordsinmatning från styrenheten.
-    * Observera att denna inställning är aktiverad som standard, och i de flesta fall är det lämpligt att låta den vara aktiverad.
+Scribe for Meetings is a cloud-based technology that takes a shared presentation on platforms like Zoom, Microsoft Teams, Google Meet, and others and renders it into an accessible presentation in real time for print-impaired individuals.
 
-### När jag startar en röstkonversation i Windows använder RIM den interna mikrofonen, oavsett vilken mikrofon jag väljer i ljudinställningarna. Vad är det som är fel?
+## Who benefits from Scribe for Meetings?
 
-Detta kan bero på Intel® Smart Sound Technology för digitala mikrofoner på vissa nyare Intel-processorer. Om du inaktiverar detta bör problemet lösas. Gör så här för att inaktivera Intel® Smart Sound Technology för digitala mikrofoner:
-1. Gå till rutan Kör (Windows+R).
-1. Skriv devmgmt.msc
-1. Expandera "Ljud-, video- och spelkontroller" i enhetsträdet
-1. Högerklicka på "Intel® Smart Sound Technology för digitala mikrofoner." Välj "Inaktivera enhet" från snabbmenyn.
+First and most importantly, the millions of print-impaired persons who would otherwise not benefit from the information being presented; and, the masses of businesses large and small, government agencies, all levels of education,, and organizations who know little about accessibility but would like an affordable means of making their content more inclusive.
 
-### Målet använder ZoomText. Hur upplever jag den visuella utdata som återges av denna förstoring?
+## Why should I choose Scribe for Meetings over other products?
 
-Detta åstadkoms genom att ZoomText växlar till kompatibilitetsläge. I detta läge kan skärmförbättringar delas via verktyg som Teams eller Zoom, samt RIM. Du kan aktivera det via ZoomText-menyn: Hjälp &gt; Advance &gt; Skärmadapter. I den öppna dialogen väljer du kompatibilitetsläge och ZoomText startar om. Vi rekommenderar att du växlar tillbaka bildskärmsadaptern till det vanliga läget efter att RIM-sessionen är klar för optimal prestanda och förstoringskvalitet. 
+We’re confident there is nothing else out there that does what we do quite the way we do it. Scribe for Meetings is the first technology of its kind to synchronize with meeting platforms in real time. Sure, competitors will take note and likely roll out their imitations, and we look forward to the competition ,but unless they plan on competing on price, we feel confident you will find what you need right here.
 
-### Behöver man göra något för att få igång RIM igen efter att en dator har omimagerats och konfigurerats om med samma datornamn? 
-Ta helt enkelt bort maskinen från ditt konto, installera om RIM och lägg sedan till maskinen på ditt konto igen.
+## How does Scribe for Meetings work?
 
-## Prissättning och betalningar
-### Så att få hjälp av en person över RIM är helt gratis, eller hur?
-Det kan du ge dig på! Abonnemangen och/eller engångsbetalningarna är till för individer och organisationer som vill erbjuda fjärrhjälp. Du behöver inte oroa dig för att skaffa en prenumeration om du är den som får hjälp. Faktum är att du inte ens behöver skapa ett konto om du bara tar emot hjälp.
-### Jag ägnar mig inte åt fjärrhjälp regelbundet, men jag kanske hjälper en vän eller familjemedlem ibland. Finns det några alternativ som inte kräver en prenumeration?
-Absolut! Vi tillgodoser så många användningsfall som möjligt.
-* Vem som helst kan hjälpa en användare via RIM gratis i upp till 30 minuter per dag. Så om du behöver hjälpa någon att installera en programvara, lösa ett problem snabbt eller skicka över några filer, så har vi något för dig. Dessa minuter behöver inte användas på en gång.
-* Det kommer naturligtvis att finnas situationer där en viss fråga kräver lite mer tid. Eller så kanske du hjälper någon att lära sig en ny programvara och kanske kommer att ansluta till och från under de närmaste dagarna. Det är där våra dagspass och incidentpass kommer in i bilden.
-    * Med incidentpass kan du ansluta till ett enda mål så många gånger som behövs under en 24-timmarsperiod.
-    * Med dagspass kan du ansluta till flera mål under en 24-timmarsperiod.
-    * Paket med förbetalda timmar innebär att du har ett visst antal timmar tillgängliga som du kan använda helt på egen tid.
-* Du kan samla på dig flera av dessa pass och timpaket och använda dem när det passar dig. Om du t.ex. har flera dagspass behöver du inte använda dem i följd. På samma sätt behöver du inte använda dina förbetalda timmar under en session eller 24-timmarsperiod.
+If you are the host:
+1. Visit [ScribeForMeetings.com,](https://scribeformeetings.com) paste the invite link for your meeting, and press “Go”.
+1. Click the button to register your meeting.
+1. If prompted, enter your email address to log in. If you’re using Scribe for Meetings on behalf of an organization, make sure to use your email address provided by that organization. If your organization has integrated Scribe for Meetings with a single sign-on (SSO) system, then you’ll be taken to the normal login process for your organization, or possibly logged in automatically. Otherwise, we’ll send you an email with a link that you can use to log into Scribe for Meetings.
+1. Enter a name for your meeting, select your PowerPoint slide deck, and press “Submit”.
+    NOTE: Scribe for Meetings currently supports Zoom meetings, Zoom webinars and Microsoft Teams. Sign up to our email list to receive a notification when we add features and additional meeting platforms.
 
-### Jag har köpt ett paket med förbetalda timmar. Vad händer med min kostnadsfria dagliga tilldelning?
-Goda nyheter: Din kostnadsfria dagliga tilldelning på 30 minuter kommer inte att försvinna! När du startar en sökordsbaserad session kommer RIM att börja med att använda din kostnadsfria dagliga tilldelning på 30 minuter. Din förbetalda tid kommer att användas efter att dina fria 30 minuter är slut.
-### Hur länge räcker mina förbetalda timmar? Är de kopplade till min prenumeration?
-Förbetalda timmar är helt skilda från din prenumeration. Med detta sagt kommer dina förbetalda timmar att finnas kvar på ditt konto i ett (1) år efter det datum då de först användes.
-### Hur går jag tillväga för att göra min arbetsplats uppmärksam på RIM?
-Vi har sammanställt ett [Self-Advocacy Kit] (https://sak.getrim.app) (SAK). Ett paket med brev i e-postformat som du kan skicka till lämpliga personer för din egen eller en anställds räkning. RIM tillhandahåller samma funktioner som mindre tillgängliga vanliga lösningar. RIM kan därför ersätta en befintlig infrastruktur, snarare än att användas vid sidan av en sådan. Det anses därför vara en rimlig tillgänglighetsanpassning och bör tillhandahållas av din organisation. Tillgänglighet är inte en tjänst, det är en rättighet till inkludering.
-### Vilka betalningsmetoder accepterar ni?
-Vi hanterar betalningar via FastSpring, så vi kan direkt acceptera en mängd olika internationella betalningsmetoder, inklusive större kreditkort, PayPal, Alipay och många fler.
+Your content will be ready to launch within minutes. No knowledge of creating accessible presentations is required. As the host, you don’t need to run extra software on your device, and content can be uploaded as little as 5 minutes before the meeting.
+For the print-impaired meeting attendee, navigate to https://www.ScribeForMeetings.com, paste in your Zoom or Microsoft Teams invite link, and press “Go”. Alternatively, your meeting host might have given you a direct link to Scribe for Meetings, either in the invitation email or in the meeting itself via chat. Whichever way you get there, you’re now ready to follow along with the presentation in any web browser on any platform.
 
-### Hur fungerar dessa pass? Startar klockan direkt vid betalning, eller samma dag som jag initierar sessionen?
-Pass börjar gälla först när den personuppgiftsansvarige initierar sessionen. Så om målets maskin går sönder och kräver en resa till verkstaden och det inte är möjligt att få en tid samma dag, kan du helt enkelt vänta tills maskinen är tillbaka i gott skick och ditt dagspass kommer fortfarande att vänta på dig.
-### Så detta innebär att dessa pass inte upphör att gälla?
-Nej. Du kan vara säker på att dina dagspass kommer att vänta tålmodigt på att du ska aktivera dem när du är redo.
-### Vad händer om jag ansluter till en annan maskin samma dag som ett incidentpass har använts?
-Det beror på. Om maskinen ingår i ditt abonnemang, dvs. om du ansluter till din hemmaskin medan du är på resande fot, är det som vanligt. Alla andra anslutningar som inte är det ursprungliga målet du anslöt till kommer att fungera under den vanliga 30-minuters tilldelningen.
-### Jag har en aktiv personlig prenumeration. Kommer jag fortfarande att kunna hjälpa en användare utanför målgruppen i upp till 30 minuter, eller via ett pass?
-Ja! Din dagliga tilldelning på 30 minuter gäller fortfarande för alla maskiner utanför ditt abonnemang. Dessutom ersätter en prenumeration inte några befintliga passerkort som du kan ha.
-### Jag har en personlig prenumeration och måldatorn genomgick en hårdvaruuppgradering. Kommer Rim att räkna detta som ett maskinbyte?
-Endast om RIM behöver installeras om. Så även om en uppgradering av hårddisken eller någon annan situation som kräver en ominstallation av Windows skulle betraktas som ett maskinbyte, skulle en uppgradering av RAM-minnet inte göra det.
-### Vårt företag köpte pro-prenumerationen, men vi har två tekniker - en som arbetar med helpdesk på dagtid och en systemunderhållstekniker som arbetar på kvällen. Skulle vi kunna tilldela kvällens sysadmin en controllerplats?
-Ja, absolut. I situationer där flera tekniker använder RIM erbjuder vi vid behov upp till två (2) extra controller-platser för 50 USD per månad och plats - 500 USD per år och plats - som komplement till pro-planen. Detta gör det enklare för flera controllers på olika arbetsstationer eller kontor att tillhandahålla fjärrsupport.  
-Om du har flera kontrollantplatser kan du köpa ytterligare kanaler för dem så att sessioner kan köras samtidigt. Varje extra kanal kostar 50 USD per månad eller 500 USD per år. 
+## How difficult is it to install Scribe for Meetings?
 
-## Säkerhet
-### Är RIM-sessioner krypterade?
-Ja, det är de. Alla sessioner på alla plattformar, oavsett om det är direkta peer-to-peer-anslutningar eller anslutningar som använder ett relä, krypteras från början till slut med Datagram Transport Layer Security (DTLS). Detta är samma teknik som används i HTTPS-protokollet som moderna webbplatser implementerar för säkerhets skull.
-### Kan Pneuma Solutions tjuvlyssna på sessioner som vidarebefordras av det publika molnet?
-Nej. Förhandling om sessionsnyckel och kryptering utförs end-to-end mellan styrenheten och målet. Med andra ord krypteras allt innan det ens lämnar din enhet. På så sätt vidarebefordrar molntjänsten bara uppgifterna som de är, vilket gör det omöjligt för tjänsten att dechiffrera uppgifterna.
-### Vilka åtgärder har vidtagits för att förhindra RCE-sårbarheter (Remote Code Execution)?
-All RIM-kod som exponeras för indata från nätverket är skriven i [memory-safe programming languages] (https://www.memorysafety.org/docs/memory-safety/), inklusive Rust och JavaScript.
-### Är RIM förenligt med HIPAA?
-Ja. Den bästa konfigurationen i detta fall skulle vara en lokal driftsättning, så vänligen [kontakta oss](https://pneumasolutions.com/contact/) om ditt användningsfall är beroende av detta.
-### Behöver några portar öppnas på målet eller styrenheten?
-Nej och nej.
-### Vilka anslutningar måste tillåtas i ett nätverk för att RIM ska fungera?
-Vid användning av det offentliga molnet krävs en https-anslutning till [getrim.app](https://getrim.app). I optimala fall är detta tillräckligt för att RIM ska kunna upprätta en peer-to-peer-anslutning mellan styrenheten och målet. Det är dock bra att tillåta UDP-anslutningar via portarna 19302 och 3478 (standardportarna för STUN och TURN). Detta säkerställer att RIM, om ett relä används, inte behöver återgå till en tcp-anslutning på port 443.
-### Körs RIM i bakgrunden, och kommer det i så fall att visas i min Command+Tab-lista?
-RIM körs i bakgrunden för att bearbeta automatiska uppdateringar, ta emot obevakade/förberedda anslutningsförfrågningar och möjliggöra användning av det globala tangentbordskommandot Option+Shift+Backspace. Den kommer inte att ringa hem för något annat ändamål och ingen personligt identifierbar information överförs.  
-RIM visas inte i Command+Tab-listan, men däremot i statusmenyerna som innehåller information om batteri, WiFi-anslutning osv.
-## Modul för fjärråtkomst
-### Finns det något som måldatorn behöver konfigurera för att kunna använda Fjärråtkomstmodulen för första gången?
-Inte alls! Det finns inga dialogrutor, skärmar för begäran om tillstånd eller något liknande.
-### Fungerar fjärrtillgänglighetsmodulen på säkra skärmar som t.ex. låsskärmen?
-Ja, det gör den! Eftersom RIM-värden körs med förhöjda behörigheter kan vi använda fjärrtillgänglighetsmodulen för säkra skärmar. Det enda undantaget till detta är FileVaults inloggningsfönster.
-## Obevakade sessioner
-### Stöds röstkonversationer under obevakade sessioner?
-Nej, men sessioner med uppmaning stöder röstkonversationer.
-### Om jag tar bort en obevakad maskin från mitt kontrollantkonto, kommer det automatiskt att återkalla behörigheten för målet?
-Ja, det gör det. När ett obevakat mål tas bort träder ändringen i kraft omedelbart. Om målmaskinen är avstängd eller på annat sätt inte är ansluten till internet träder ändringen i kraft så snart en internetanslutning upprättas på maskinen.
-### Målmaskinen startades om efter installation av uppdateringar och drivrutiner, och det krävs ett lösenord för att logga in. Hur fortsätter sessionen härifrån?
-I de flesta fall, särskilt när FileVault-diskkryptering är aktiverad, måste målanvändaren ange lösenordet manuellt. RIM kan inte starta på en krypterad Mac innan den har varit helt inloggad.
-### Jag har flera maskiner som spelar rollen som styrenhet. Kommer listan över maskiner som konfigurerats för obevakad åtkomst att fyllas i på alla maskiner?
-Ja, listan över maskiner som konfigurerats för obevakad åtkomst lagras i ditt konto, så den fylls i automatiskt.
+Scribe for Meetings is not an installed application. It is a cloud service, so nothing more than a browser is needed to enjoy a meeting. For presenters, Other than uploading their content in advance of the meeting, the process was intentionally designed to be simple. There is nothing to install to your computer or device other than Zoom, Microsoft Teams or similar meeting platforms.
+Enterprise customers can host Scribe for Meetings on their own servers. Please get in touch with us for details.
+
+## I see an attendee named “Scribe for Meetings” trying to join my meeting. What’s going on?
+
+That’s the Scribe bot. This bot watches the screen in your meeting, so it can see what slide is currently being displayed and provide the accessible version of that slide in real time to print-impaired attendees. The Scribe bot will not disrupt your meeting in any way, and it will not collect any information other than what content is currently being displayed through screen sharing. If your meeting has a waiting room, please promptly admit the Scribe bot into the meeting. Otherwise, Scribe for Meetings will not work.
+
+## I’m a print-impaired meeting attendee, and I don’t know if the meeting I’m attending has been registered through Scribe for Meetings. What can I do?
+
+Go to [ScribeForMeetings.com](https://scribeformeetings.com), paste in the Zoom or Microsoft Teams invite link for your meeting, and press “Go”. If the meeting has been registered with Scribe for Meetings, then you’re ready to follow along with accessible slides. If not, you can sign up to be notified by email when the meeting has been registered with Scribe for Meetings.
+
+## I frequently attend Zoom or Microsoft Teams meetings. What’s the easiest way for me to find out if a meeting is registered with Scribe for Meetings, and if it is, view the accessible content?
+
+Scribe for Meetings has an [extension for Chrome and Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) that checks the availability on Scribe for Meetings of any Zoom or Microsoft Teams meeting you attend. With a single hotkey, you can view the accessible content if the meeting is registered, or request a follow-up notification if the meeting is registered with Scribe for Meetings later.
+
+## I’m a print-impaired meeting attendee. Do you have any resources to help me ask the meeting host to use Scribe for Meetings?
+
+Yes; check out our [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com). Here you’ll find a variety of pre-written letters that you can personalize, then copy and paste into an email.
+
+## Can Scribe for Meetings convert a presentation to accessible file formats for offline viewing?
+
+Yes. When creating the meeting, the presenter can optionally choose to provide their presentation for downloading in the following file formats:
+* An accessible web page, with all of the same features as the live presentation, including read aloud
+* Tagged PDF
+* MP3, via text-to-speech in about a dozen languages
+* DAISY, text plus audio
+* EPUB
+* Microsoft Word
+* Braille: Grade 1, Grade 2, Unified English Braille, and many other languages
+
+The PDF and Microsoft Word options support large print. This option, and other options such as speaking rate for audio output, can be chosen by attendees when they download the slides.
+This feature is not enabled by default; the presenter must choose to allow it. To enable this feature when registering a meeting, check the checkbox called “Allow attendees to download accessible versions of slides.” This choice will only take effect for the meeting currently being registered.
+For a meeting where this feature is enabled, as soon as the presenter has shown a slide, the web page where attendees view accessible slides will include a link called “Download Slides”. To download the slides, an attendee should follow these steps:
+1. Click the “Download Slides” link.
+1. If prompted, enter your email address and follow the instructions to log in.
+1. Choose the accessible format you want.
+1. For some formats, you can optionally customize settings, such as text-to-speech voice, speaking rate, braille translation table, or large print.
+1. Click the “Prepare Download” button.
+1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+
+## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
+
+Yes. Follow these steps:
+1. 
+Go to ScribeForMeetings.com.
+1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
+1. Click “Settings”, then “Meeting Defaults”.
+1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
+
+## I want to protect my slides from unauthorized copying and distribution. Does Scribe for Meetings support this?
+
+Unfortunately, Scribe for Meetings cannot stop your attendees from copying the text of your slides. However, if you don’t allow the slides to be downloaded, it won’t be easy for attendees to copy your slides, because they will have to copy one slide at a time. Also, note that in practice, this is no different from what any attendee can already do by taking screenshots of your slides.
+
+## Is Scribe for Meetings multilingual?
+
+Yes. Scribe for Meetings can render content in any of 140 languages, again with no extra effort from the presenter.
+
+## Do I need to slow down my presentation to make sure that print-impaired attendees can keep up?
+
+No. Scribe for Meetings has a feature called Dynamic Visual Representation, or DVR mode for short, that allows print-impaired attendees to read your accessible slides at their own pace. An attendee can pause the live presentation, go back to a slide they’ve already read, move forward at their own pace, and then continue with the live presentation when they’re ready.
+To use DVR mode, the attendee should press either the Suspend Presentation button or the Previous Slide button. These buttons are labeled as such for screen reader users, and for mouse users who hover over them. Visually, they’re at the bottom of the page and look like the Pause and Previous Track buttons in a media player. When the user presses one of these buttons, the live presentation will pause, and for the Previous Slide button, it will return to the previous slide. The user can then use the Previous Slide and Next Slide buttons to go through the slides at their own pace, and the Go Live button to return to the live presentation. These buttons look like the Previous Track, Next Track, and Play buttons in a media player.  
+Note that DVR mode only allows attendees to review slides that have been shown since they joined the presentation. If a print-impaired attendee is late for your presentation, then they missed the same slides that any other late attendee would have missed.
+
+## I have a print-impaired attendee who would benefit from having my content spoken aloud but isn’t comfortable with a full screen reader. Can Scribe for Meetings help?
+
+Yes. Our Read Aloud feature will speak your slides using the voices provided by your user’s device and web browser, while drawing a box around each word as it is spoken to help the user follow along visually. For Windows users, we highly recommend the Microsoft Edge browser for this feature, because Edge offers outstanding voices in several languages, free of charge. However, this feature also works with all other major platforms and browsers, including mobile devices.  
+To start reading the current slide aloud, press the Read Aloud button, which is at the bottom of the screen and looks like a speaker. While Scribe for Meetings is reading the slide aloud, it will show controls to stop reading (the button with a square icon), pause or resume, go back or forward (the buttons that look like Previous Track and Next Track buttons in a media player), speed up and slow down reading, or change the voice. These controls will go away as soon as reading is finished or as soon as the user stops it.  
+Note that Read Aloud and DVR mode (see above) can be used together, to allow print-impaired attendees to read slides both in their own way and at their own pace.
+
+## I have a print-impaired attendee who needs my slides in a large font but doesn’t need a full-screen magnification program. Can Scribe for Meetings help?
+
+Yes. Scribe for Meetings displays your slides in a way that makes them accessible for attendees with all types of content requirements. If large fonts are needed, an attendee can use their browser’s page zoom feature to adjust the font size of the slides, without requiring the user to continually scroll back and forth. Scribe for Meetings will also automatically display the text in the user’s preferred color scheme, whether it’s the usual dark-on-light, light-on-dark (also known as dark mode), or a custom scheme.  
+
+## Wait! What’s going on here? Why do my slides look so different in Scribe for Meetings than they do in my presentation?
+
+Every aspect of how Scribe for Meetings displays your slides is optimized for accessibility, for attendees with all types of print impairments. Since Scribe for Meetings is meant to be used alongside your existing meeting platform, attendees are always free to flip back to the main meeting window to see the slides as they’re displayed in your presentation without accessibility.
+
+## I don’t use PowerPoint. Can I still make my presentation accessible with Scribe for Meetings?
+
+Scribe for Meetings can make your screen-shared slides accessible no matter what app you use to present them, as long as you can provide your slide deck in PowerPoint format. Other presentation apps such as Keynote and Google Slides can convert their slide decks to PowerPoint format, so you can use these with Scribe for Meetings.
+
+## Scribe for Meetings isn’t showing the accessible versions of my slides during the presentation, or it’s skipping some slides. What’s wrong?
+
+Make sure that you’re presenting your slides in a full-screen slide show, and that you’ve set up Zoom or Microsoft Teams screen sharing to share that slide show with your audience. If you’re using PowerPoint for Windows to run your presentation, then once you’ve opened PowerPoint, make sure you press F5 to enter slide show mode.
+[Learn more about how to use Zoom screen sharing with PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+[Learn how to use Microsoft Teams screen sharing with PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
+
+## How does Scribe for Meetings handle pictures and graphics in my slides?
+
+If you already wrote descriptions (also known as alt tags or captions) for the graphical content in your slides, Scribe for Meetings will use those. Otherwise, Scribe for Meetings will use a cloud-based image description service powered by machine learning to automatically add alt tags for your graphics. If those pictures contain text, Scribe for Meetings will also use optical character recognition (OCR) to make that text accessible.
+
+## My slides have charts, diagrams, or other complex graphics. Can Scribe for Meetings handle them?
+
+The short answer is, not for the most part. We’re still working on this. Because the Scribe Augmented Document Remediation platform is powered by machine learning, as we receive more documents and slide decks with complex graphics, we’ll be able to train our model to make those graphics accessible. But, for now, you’ll just have to try it and see.
+
+## Does Scribe for Meetings work with meeting platforms other than Zoom and Microsoft Teams, like Jitsi Meet, Google Meet, Slack, Amazon Chime, or BlueJeans?
+
+Not yet, but it will soon.
+
+## How do people within our organization log into Scribe for Meetings?
+
+Scribe for Meetings currently supports two options for authentication. The simplest option is our email-based login process. Just enter your email address, and we’ll send a link that you can use to log in; no password is needed. For organizations with more stringent security requirements, we can also integrate with single sign-on (SSO) systems that implement the SAML standard, either via the [InCommon](https://www.incommon.org/) federation or using bilateral metadata exchange. Our SAML service provider uses the open-source Shibboleth SP package and was implemented in partnership with [Signet, Inc.,](https://www.signet.id/) an identity management and access control firm founded by an architect of Shibboleth. Note that we support SSO through a variety of identity providers; in addition to Shibboleth IdP, we’ve tested with Azure Active Directory. When your organization signs up with Scribe for Meetings, we’ll offer SSO onboarding, covered by the setup fee.
+
+## What is the future of Scribe for Meetings?
+
+Scribe, the platform behind our Scribe line of products, is actively learning every time a document is processed. The machine learning powered Augmented Document Remediation technology gets smarter with each page, moving us that much closer to 100% accuracy. The benefits spill over into all our products, making Scribe for Meetings an application that will only get better the more you use it.
